--- a/guides/src/content/release_notes/0_40_0.md
+++ b/guides/src/content/release_notes/0_40_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 0.40.0
 section: release_notes
+order: 22
 ---
 
 # Summary
@@ -12,19 +13,21 @@ very little difficulty. We're still working on identifying all of the
 Spree extensions that run 0.40.x but its a fairly safe bet that any
 extension running 0.30.x will work with this release.
 
-***
+---
+
 We're always looking for more help with the Spree documentation.
 If you'd like to offer assistance please contact us on the spree-user
 mailing list and we can give you commit access to the documentation
 project.
-***
+
+---
 
 # Database Migrations
 
 There are several new database changes in the 0.40.0 release. You will
 need to update your database migrations as follows:
 
-```bash
+````bash
 $ bundle exec rake spree:install:migrations
 $ bundle exec rake db:migrate```
 
@@ -133,16 +136,16 @@ so only the original customer can see it. The solution is to use a
 
 ```bash
 http://example.com/orders/token/aidik313dsfs49d
-```
+````
 
-Spree provides a *TokenizedPermission* model used to grant access to
+Spree provides a _TokenizedPermission_ model used to grant access to
 various resources through a secure token. This model works in
-conjunction with the *Spree::TokenResource* module which can be used to
+conjunction with the _Spree::TokenResource_ module which can be used to
 add tokenized access functionality to any Spree resource.
 
-The *Order* model is one such model in Spree where this interface is
+The _Order_ model is one such model in Spree where this interface is
 already in use. The following code snippet shows how to add this
-functionality through the use of the *token_resource* declaration:
+functionality through the use of the _token_resource_ declaration:
 
 ```ruby
 Order.class_eval do
@@ -150,7 +153,7 @@ Order.class_eval do
 end
 ```
 
-If we examine the default CanCan permissions for *Order* we can see how
+If we examine the default CanCan permissions for _Order_ we can see how
 tokens can be used to grant access in cases where the user is not
 authenticated.
 
@@ -170,16 +173,18 @@ authorizing token.
 
 The final step is to ensure that the token is passed to CanCan when the
 authorization is performed. Most controllers will do this automatically
-if they declare *resource_controller*.
+if they declare _resource_controller_.
 
 ```ruby
 authorize! action, resource, session[:access_token]
 ```
 
-***
-Since *OrdersController* does not implement *resource_controller*
+---
+
+Since _OrdersController_ does not implement _resource_controller_
 this is done explicitly in the controller
-***
+
+---
 
 For more information on tokenized permissions please read the detailed
 [security guide](http://guides.spreecommerce.org/legacy/0-40-x/security.html#tokenized-permissions).
