--- a/guides/src/content/release_notes/0_50_0.md
+++ b/guides/src/content/release_notes/0_50_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 0.50.0
 section: release_notes
+order: 21
 ---
 
 # Summary
@@ -30,7 +31,7 @@ project.
 There is only one minor database changes in the 0.50.0 release. You will
 need to update your database migrations as follows:
 
-```bash
+````bash
 $ bundle exec rake spree:install:migrations
 $ bundle exec rake db:migrate```
 
@@ -72,3 +73,4 @@ you may experience compatibility issues. Please report any troubles you
 have on the spree-user list and we'll see if we can help. Eventually
 we'll revisit these extensions and verify their compatibility.
 !!!
+````
