--- a/guides/src/content/release_notes/0_60_0.md
+++ b/guides/src/content/release_notes/0_60_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 0.60.0
 section: release_notes
+order: 20
 ---
 
 # Summary
@@ -17,12 +18,14 @@ While the removal of resource_controller is not most glamous or
 exciting change, it's another significant stepping stone to our 1.0
 release.
 
-***
+---
+
 We're always looking for more help with the Spree documentation.
 If you'd like to offer assistance please contact us on the spree-user
 mailing list and we can give you commit access to the
 documentation project.
-***
+
+---
 
 # Database Migrations
 
@@ -52,38 +55,38 @@ this release extends this to all front-end controllers.
 ## Supported Functionality
 
 The majority of backend (Admin) controllers now base off of
-*Admin::ResourceController* class which provides a much simpler and
+_Admin::ResourceController_ class which provides a much simpler and
 slimmed down version of resource_controllers existing features, while
 attempting to maintain backwards compatibility for the majority commonly
 used extension points.
 
-*Admin::ResourceController* provides several resource_controller style
+_Admin::ResourceController_ provides several resource_controller style
 features as follows.
 
 ### Standard CRUD Methods
 
 There are basic implementations of all the standard CRUD methods:
 
--   *:index*
--   *:show*
--   *:create*
--   *:read*
--   *:update*
--   *:destroy*
+- _:index_
+- _:show_
+- _:create_
+- _:read_
+- _:update_
+- _:destroy_
 
 ### In Action Callbacks
 
--   *:update.before*
--   *:create.before*
--   *:update.after*
--   etc.
+- _:update.before_
+- _:create.before_
+- _:update.after_
+- etc.
 
 ### URL Helpers
 
--   *new_object_url*
--   *edit_object_url*
--   *object_url*
--   *collection_url*
+- _new_object_url_
+- _edit_object_url_
+- _object_url_
+- _collection_url_
 
 !!!
 Use of these generic helpers is discouraged in favor of the
@@ -92,8 +95,8 @@ default Rails helper urls.
 
 ### Instance Variables
 
--   *`object+
-    * +`collection*
+- \*`object+
+  - +`collection\*
 
 !!!
 Use of these variables is strongly discouraged. Use the actual
@@ -102,34 +105,36 @@ Rails standard variable names instead.
 
 ## Unsupported Functionality
 
-*Admin::ResourceController* does **NOT** provide the following
+_Admin::ResourceController_ does **NOT** provide the following
 resource_controller features:
 
 ### Custom Responses
 
--   *create.wants.js*
--   *update.wants.html*
+- _create.wants.js_
+- _update.wants.html_
 
-These have been replaced with a new method called *respond_override*
+These have been replaced with a new method called _respond_override_
 
-***
+---
+
 See the Customization guide for more details
-on *respond_override*
-***
+on _respond_override_
+
+---
 
 ### Deprecated Methods
 
 These methods are deprecated and should either be removed or replaced
-with a custom *load_resource* method (see *Admin::ResourceController*
+with a custom _load_resource_ method (see _Admin::ResourceController_
 source for details).
 
--   *object*
--   *collection methods*
+- _object_
+- _collection methods_
 
 The following method for custom flash messages has been removed entirely
 (with no replacement approach.)
 
--   *create.flash*
+- _create.flash_
 
 Admin::ResourceController's use is encouraged in extensions and/or site
 customizations that require basic CRUD admin controllers. It should not
@@ -137,12 +142,14 @@ be used on front-end or complex admin controllers, as you can see from
 the current source even certain core admin controllers do not use it
 (for example Admin::OrdersController).
 
-***
+---
+
 While the use of resource_controller has been completely removed
 from all of Spree's core controllers, the dependency on
 resource_controller gem will remain for a while to allow extension
 authors to update their projects.
-***
+
+---
 
 # Miscellaneous Changes
 
