--- a/guides/src/content/release_notes/0_70_0.md
+++ b/guides/src/content/release_notes/0_70_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 0.70.0
 section: release_notes
+order: 19
 ---
 
 # Summary
@@ -9,32 +10,36 @@ This 0.70.0 release is the first Spree release to support Rails 3.1 and
 contains several exciting new features including a complete overhaul of
 the theming system and major improvements to the Promotions system.
 
-***
+---
+
 We're always looking for more help with the Spree documentation.
 If you'd like to offer assistance please contact us on the spree-user
 mailing list and we can give you commit access to the documentation
 project.
-***
+
+---
 
 # Theming Improvments
 
 Theming support in this release has change significantly and all the new
 features are covered in detail in the following guides:
 
--   [Customization Overview](http://guides.spreecommerce.org/legacy/0-70-x/customization.html) - provides a high level
-    introduction to all the customization and theming options now
-    provided by Spree.
--   [View Customization](http://guides.spreecommerce.org/legacy/0-70-x/view_customization.html) - introduces and
-    explains how to use Deface to customize Spree's views.
--   [Asset Customization](http://guides.spreecommerce.org/legacy/0-70-x/asset_customization.html) - explains how Spree
-    uses Rails' new asset pipeline, and how you can use it to customize
-    the stylesheets, javascripts and images provided by Spree.
+- [Customization Overview](http://guides.spreecommerce.org/legacy/0-70-x/customization.html) - provides a high level
+  introduction to all the customization and theming options now
+  provided by Spree.
+- [View Customization](http://guides.spreecommerce.org/legacy/0-70-x/view_customization.html) - introduces and
+  explains how to use Deface to customize Spree's views.
+- [Asset Customization](http://guides.spreecommerce.org/legacy/0-70-x/asset_customization.html) - explains how Spree
+  uses Rails' new asset pipeline, and how you can use it to customize
+  the stylesheets, javascripts and images provided by Spree.
 
-***
+---
+
 While the upgrade instructions that follow briefly cover the new
 asset pipeline features we suggest you review the guides above as part
 of your upgrade preparation.
-***
+
+---
 
 ## Themes as engines
 
@@ -50,12 +55,12 @@ engines and can be treated as such.
 We've created two front-end themes to help show this new approach in
 action:
 
--   [Spree Blue](https://github.com/spree/spree_blue_theme) - Recreates
-    the original "blue" theme of 0.60.x as a stand alone theme.
+- [Spree Blue](https://github.com/spree/spree_blue_theme) - Recreates
+  the original "blue" theme of 0.60.x as a stand alone theme.
 
--   [Rails Dog Radio](https://github.com/spree/spree_rdr_theme) - This
-    recreates some of the aspects of the Rails Dog Radio demo
-    application for a default Spree application.
+- [Rails Dog Radio](https://github.com/spree/spree_rdr_theme) - This
+  recreates some of the aspects of the Rails Dog Radio demo
+  application for a default Spree application.
 
 Both themes can be installed by just adding a reference to the git
 repository to your Gemfile, ie:
@@ -118,18 +123,20 @@ $ bundle exec rake assets:precompile
 This would write all the assets to the `public/assets` directory while
 including an MD5 fingerprint in the filename for added caching benefits.
 
-***
+---
+
 In production all references to assets from views using
 image_tag, asset_path, javascript_include_tag, etc. will
 automatically include this fingerprint in the file name so the correct
 version will be served.
-***
+
+---
 
 ## Pre-compiling for development
 
 Spree alters the behaviour of the precompile rake task as follows:
 
-```bash
+````bash
 $ bundle exec rake assets:precompile:nondigest```
 
 It will still output the assets to `public/assets` but it will not
@@ -182,7 +189,7 @@ as a standalone git repository using the following command
 
 ```bash
 $ spree extension foofah
-```
+````
 
 One of the most important advances in this new generator is that you can
 now easily run specs for extensions in their own standalone repository.
@@ -197,10 +204,12 @@ $ bundle exec rspec spec
 You can get more information on the extension generator in the [Creating
 Extensions](http://guides.spreecommerce.org/legacy/0-70-x/creating_extensions.html) guide.
 
-***
+---
+
 You must install the spree gem in order to use the new extension
 generator.
-***
+
+---
 
 # Upgrade Instructions
 
@@ -244,10 +253,10 @@ same for any Rails 3.0.x application upgrading to 3.1.
 
 You'll need to make several additions and changes to your Gemfile:
 
--   Update spree to 0.70.0
--   Update rails to 3.1.1
--   Update mysql2 to 0.3.6 - if your using it.
--   Ensure the assets group is present:
+- Update spree to 0.70.0
+- Update rails to 3.1.1
+- Update mysql2 to 0.3.6 - if your using it.
+- Ensure the assets group is present:
 
 ```ruby
 group :assets do
@@ -294,19 +303,21 @@ The spree_site.rb file is no longer required so it's important to
 migrate any existing code out of this file and into the correct
 location.
 
--   Model, controller or helper evals should be relocated to a suitable
-    _decorator.rb file.
--   Configuration settings should be moved to initializers.
--   If you are activating custom Abilities or Calculators, you should
-    remove then for now. You can re-add them to config/application.rb
-    after you've ran the spree:site generator below. They will need to
-    be inside the `config.to_prepare` block.
+- Model, controller or helper evals should be relocated to a suitable
+  \_decorator.rb file.
+- Configuration settings should be moved to initializers.
+- If you are activating custom Abilities or Calculators, you should
+  remove then for now. You can re-add them to config/application.rb
+  after you've ran the spree:site generator below. They will need to
+  be inside the `config.to_prepare` block.
 
-***
+---
+
 The decorator initialization block will be automatically included
 in config/application.rb for you, when you run the spree:site generator
 below.
-***
+
+---
 
 ### Remove spree_site from config/application.rb
 
@@ -327,7 +338,7 @@ placeholders.
 
 Install all the required gems, and lock your dependencies by running:
 
-```bash
+````bash
     $ bundle update```
 
 ### Generate & copy required files
@@ -345,7 +356,7 @@ do not have multiple copies of the following line, in
 ```ruby
 config.middleware.use "RedirectLegacyProductUrl"
 config.middleware.use "SeoAssist"
-```
+````
 
 ### Update your database
 
@@ -358,7 +369,7 @@ Make sure you've taken a backup of the database before
 attempting this step.
 !!!
 
-```bash
+````bash
 $ bundle exec rake db:migrate```
 
 ## Migrating your assets
@@ -426,24 +437,26 @@ To include your previously defined old style theming hooks from
 
 ```ruby
 require 'lib/site_hooks'
-```
+````
 
-***
+---
+
 The development log will include suggested replacement Deface
 overrides anytime Rails encounters a old style hook call. These
 suggestions are a best effort replacement, but might need some tweaks as
 some elements have been moved while removing the old hook calls from
 Spree's view files.
-***
+
+---
 
 For more information about using Deface overrides, please refer to the
 [View Customization](http://guides.spreecommerce.org/legacy/0-70-x/view_customization.html) guide.
 
 # New way to register Calculators
 
-Calculators no longer can be registered with *register* method. The
+Calculators no longer can be registered with _register_ method. The
 register method is refactored to take advantage of default Rails
-application configuration *Rails.application.config.spree.calculators*.
+application configuration _Rails.application.config.spree.calculators_.
 
 For more information about this new change, please refer to the
 [Ajustments](http://guides.spreecommerce.org/legacy/0-70-x/adjustments.html) guide.
