--- a/guides/src/content/release_notes/0_9_0.md
+++ b/guides/src/content/release_notes/0_9_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 0.9.0
 section: release_notes
+order: 25
 ---
 
 !!!
@@ -11,23 +12,22 @@ changes.
 # Improved Layout Customization
 
 Work has been done to reduce the likelihood of new projects needing to
-override the default Spree layout template *application.html.erb*. The
+override the default Spree layout template _application.html.erb_. The
 title, stylesheets, and logo now can all be customized without creating
 your own copy of the layout.
 
 ## New title methods
 
-There are some new methods for manipulating the page title: the *title*
-and *set_title* helper methods in Spree::BaseController.
+There are some new methods for manipulating the page title: the _title_
+and _set_title_ helper methods in Spree::BaseController.
 
-Use *set_title* to set a page title either from a controller method, or
-a view template. You can also override the *default_title* and *title*
+Use _set_title_ to set a page title either from a controller method, or
+a view template. You can also override the _default_title_ and _title_
 methods in Spree::BaseController for further control.
 
-The *title* method is used in *application.html.erb* of the new release,
+The _title_ method is used in _application.html.erb_ of the new release,
 however if you are upgrading and want to take advantage, use this in
-between your *&lt;title&gt;* tags of your layout template
-
+between your _&lt;title&gt;_ tags of your layout template
 
 And to set the title in a view template:
 
@@ -40,20 +40,20 @@ stylesheet names without the file extensions. See the [customization
 guide](http://guides.spreecommerce.org/legacy/0-11-x/customization_overview.html) for more information.
 
 If you are upgrading, to take advantage of this use the new
-*stylesheet_tags* helper method.
+_stylesheet_tags_ helper method.
 
 ## Customize logo
 
-*Spree::Config+ is a new config option for customizing the logo image
+\*Spree::Config+ is a new config option for customizing the logo image
 path.
 
-If you are upgrading, take advantage of this by using the new*logo+
+If you are upgrading, take advantage of this by using the new\*logo+
 helper method.
 
 # Polymorphic Calculators
 
 There has been significant refactoring to the implementation of
-calculators. Calculators are now polymorphic and belong to *calculable*.
+calculators. Calculators are now polymorphic and belong to _calculable_.
 This will have a non trivial impact on your existing store
 configuration. After upgrading to Spree 0.9.0 you are likely going to
 have to make several manual adjustments to the existing tax and shipping
@@ -79,22 +79,21 @@ All calculators need to implement the following method
 
 The calculator is passed an optional "target" on which to base their
 calculation. This method is expected to return a single numeric value
-when the calculation is complete. A value of *nil* should be returned in
+when the calculation is complete. A value of _nil_ should be returned in
 the event that a charge is not applicable.
 
-Since calculators are now instances of *ActiveRecord::Base* they can be
-configured with preferences. Each instance of *ShippingMethod* is now
+Since calculators are now instances of _ActiveRecord::Base_ they can be
+configured with preferences. Each instance of _ShippingMethod_ is now
 stored in the database along with the configured values for its
 preferences. This allows the same calculator (ex.
-*Calculator::FlatRate*) to be used with multiple *ShippingMethods*, and
+_Calculator::FlatRate_) to be used with multiple _ShippingMethods_, and
 yet each can be configured with different values (ex. different amounts
 per calculator.)
 
 Calculators are configured using Spree's flexible [preference
 system](http://guides.spreecommerce.org/legacy/0-11-x/preferences.html). Default values for the preferences are
 configured through the class definition. For example, the flat rate
-calculator class definition specifies an amount with a default value of
-0.
+calculator class definition specifies an amount with a default value of 0.
 
 ```bash
  class Calculator::FlatRate < Calculator
@@ -107,8 +106,8 @@ Spree now contains a standard mechanism by which calculator preferences
 can be edited. The screenshot below shows how the amounts for the flat
 rate calculator are now editable directly in the admin interface.
 
-Calculators are now stored in a special *calculator* directory located
-within *app/models*. There are several calculators included that meet
+Calculators are now stored in a special _calculator_ directory located
+within _app/models_. There are several calculators included that meet
 many of the standard store owner needs. Developers are encouraged to
 write their own [extensions](http://guides.spreecommerce.org/legacy/0-11-x/extensions.html) to supply additional
 functionality or to consider using a [third party
@@ -123,10 +122,10 @@ some registration logic to the extension containing the calculator. This
 will allow the calculator to do a one time registration during the
 standard extension activation process.
 
-The *CalculatorExtenion* that is included in the Spree core is a good
+The _CalculatorExtenion_ that is included in the Spree core is a good
 example of how you can achieve this in your own custom extensions.
 
-```bash
+````bash
  def activate
  [
    Calculator::FlatPercent,
@@ -485,3 +484,4 @@ is often useful if you need to update a customized version. The update
 command will also no longer copy the *routes.rb* file - the original
 version just loads the core Spree routes file, so has no need to change.
 (Recall that you can define new routes in your extensions.)
+````
