--- a/guides/src/content/release_notes/1_2_0.md
+++ b/guides/src/content/release_notes/1_2_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 1.2.0
 section: release_notes
+order: 15
 ---
 
 Spree 1.2.0 introduces some fairly major changes in the basic
@@ -47,7 +48,7 @@ you are upgrading an existing Spree installation or just want it to
 work, you can achieve the behaviour of a 1.1 installation by adding
 "spree_auth_devise" to your Gemfile.
 
-```ruby
+````ruby
 gem 'spree_auth_devise', git:
 "git://github.com/spree/spree_auth_devise"```
 
@@ -230,4 +231,4 @@ function.
 -   Only acknowledge coupon codes for promos that have the
     'spree.checkout.coupon_code_added' event
     ([4158979](https://github.com/spree/spree/commit/4158979))
-
+````
