--- a/guides/src/content/release_notes/3_1_0.md
+++ b/guides/src/content/release_notes/3_1_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 3.1.0
 section: release_notes
+order: 6
 ---
 
 ## Major/New Features
@@ -26,7 +27,7 @@ Contributed by [Jeff Dutil](https://github.com/JDutil),
 
 While we've had the ability to version our API we weren't making use of it.
 Now that we're beginning to write a new API we've added a v1 namespace,
-and default routing `/api` requests to use `/api/v1`.  The `/api/v2` will be opt-in
+and default routing `/api` requests to use `/api/v1`. The `/api/v2` will be opt-in
 until we feel it is complete, and have deprecated /api/v1 (likely for Spree 4).
 
 Conitrbuted by [Ben A. Morgan](https://github.com/BenMorganIO)
@@ -47,11 +48,11 @@ Conitrbuted by [Martin Meyerhoff](https://github.com/mamhoff)
 
 ### Future Discontinue of Products & Variants
 
-Soft deleting means that the records are left in the database but behave as if they are really deleted. Because associations from other objects (like line itmes to variant) won't normally see the deleted, core code is forced (unnaturally) to use scopes like ```.with_deleted```
+Soft deleting means that the records are left in the database but behave as if they are really deleted. Because associations from other objects (like line itmes to variant) won't normally see the deleted, core code is forced (unnaturally) to use scopes like `.with_deleted`
 
 We are fixing this by adding new feilds 'Discontinue On' to products & variants (discontinue_on)
 
-This fixes a design flaw in that in most stores these objects really should not be considered "deleted."  The approach proposed solves the underlying flaw and all the related bugs caused by this flaw in the following ways:
+This fixes a design flaw in that in most stores these objects really should not be considered "deleted." The approach proposed solves the underlying flaw and all the related bugs caused by this flaw in the following ways:
 
 - Migrate the timestamps deleted_at to discontinue_on (when possible), and un-delete the deleted variants (when there is not matching SKU) and products (when there is no matching slug)
 
@@ -89,7 +90,7 @@ We've put a lot of work to make the Admin Panel more user-friendly, this include
 
 - new `breadcrumbs` navigation [#7319](https://github.com/spree/spree/pull/7319)
 
-- unified and fixed `form validations` [#7306](https://github.com/spree/spree/pull/7306) [#7314](https://github.com/spree/spree/pull/7314)  [#7315](https://github.com/spree/spree/pull/7315)
+- unified and fixed `form validations` [#7306](https://github.com/spree/spree/pull/7306) [#7314](https://github.com/spree/spree/pull/7314) [#7315](https://github.com/spree/spree/pull/7315)
 
 - new order's completion date format with time [#7208](https://github.com/spree/spree/pull/7208)
 
@@ -137,40 +138,40 @@ You can view the full changes using [Github Compare](https://github.com/spree/sp
 
 ## Noteworthy Changes
 
-* API v1 namespace to begin transition to v2.
+- API v1 namespace to begin transition to v2.
 
-    [Ben A. Morgan](https://github.com/spree/spree/pull/6046)
+  [Ben A. Morgan](https://github.com/spree/spree/pull/6046)
 
-* Remove all HABTM associations in favour of HMT associations.
+- Remove all HABTM associations in favour of HMT associations.
 
-    This removes the `Spree::ShippingMethod::HABTM` error message;
-    Allows users to extend the joins tables since they are now models;
-    And use the [Apartment](https://github.com/influitive/apartment) gem to their hearts content.
+  This removes the `Spree::ShippingMethod::HABTM` error message;
+  Allows users to extend the joins tables since they are now models;
+  And use the [Apartment](https://github.com/influitive/apartment) gem to their hearts content.
 
-    [Ben A. Morgan](https://github.com/spree/spree/pull/6627) & [VinSol](https://github.com/spree/spree/pull/7034)
+  [Ben A. Morgan](https://github.com/spree/spree/pull/6627) & [VinSol](https://github.com/spree/spree/pull/7034)
 
-* Removed `Spree::Alert`
+- Removed `Spree::Alert`
 
-    [Jeff Dutil](https://github.com/spree/spree/pull/6516)
+  [Jeff Dutil](https://github.com/spree/spree/pull/6516)
 
-* Remove automatic payment creation with default credit card
+- Remove automatic payment creation with default credit card
 
-    [Darby Perez](https://github.com/spree/spree/pull/6601)
+  [Darby Perez](https://github.com/spree/spree/pull/6601)
 
-* Allow checkout errors to be displayed when updating customer details
+- Allow checkout errors to be displayed when updating customer details
 
-    [Darby Perez](https://github.com/spree/spree/pull/6604)
+  [Darby Perez](https://github.com/spree/spree/pull/6604)
 
-* Add default Refund Reason to `seeds.rb`
+- Add default Refund Reason to `seeds.rb`
 
   Creating a Refund will fail if there's no refund reason record in the database. That
   reason has to have the name set to "Return processing" and the mutable flag set to `false`.
 
   See https://github.com/spree/spree/blob/master/core/app/models/spree/refund_reason.rb#L5-L10
 
-    [Martin Meyerhoff](https://github.com/spree/spree/pull/6528)
+  [Martin Meyerhoff](https://github.com/spree/spree/pull/6528)
 
-* Add a `current_price_options` helper to guide price calculation in the shop
+- Add a `current_price_options` helper to guide price calculation in the shop
 
   When you use dynamic prices (as detailed above), those prices will depend on something
   (like the tax zon of the current order, or whether your customer is a business customer).
@@ -179,16 +180,17 @@ You can view the full changes using [Github Compare](https://github.com/spree/sp
 
   Be careful though to also patch the following parts of Spree accordingly:
 
-  * `Spree::VatPriceCalculation#gross_amount`
-  * `Spree::LineItem#update_price`
-  * `Spree::Stock::Estimator#taxation_options_for`
-  * Subclass the `DefaultTax` calculator
+  - `Spree::VatPriceCalculation#gross_amount`
+  - `Spree::LineItem#update_price`
+  - `Spree::Stock::Estimator#taxation_options_for`
+  - Subclass the `DefaultTax` calculator
 
     [Martin Meyerhoff](https://github.com/spree/spree/pull/6662)
 
-* Added `Spree.admin_path` option for a dynamic admin path; making automated 'script' attacks on the backend more difficult.
+- Added `Spree.admin_path` option for a dynamic admin path; making automated 'script' attacks on the backend more difficult.
 
   You can simply configure the option by assigning the path in your Spree initializer:
+
   ```ruby
   Spree.admin_path = "/my-secret-backend"
   ```
@@ -196,87 +198,87 @@ You can view the full changes using [Github Compare](https://github.com/spree/sp
   NOTE: Plugins are not converted and still use the default /admin path. But these plugins can be
   changed easily by adding the `path: Spree.admin_path` option in the routes.
 
-    [Rick Blommers](https://github.com/spree/spree/pull/6739) & [VinSol](https://github.com/spree/spree/pull/7065)
+  [Rick Blommers](https://github.com/spree/spree/pull/6739) & [VinSol](https://github.com/spree/spree/pull/7065)
 
-* Changed to Use Time.current instead of Time.now
+- Changed to Use Time.current instead of Time.now
 
-    Rails uses config.time_zone to set time zone for the application, but Time.now uses server time zone instead
-    of using set config.time_zone. So, in order to use application time zone we need to use Time.current/Time.zone.now.
+  Rails uses config.time_zone to set time zone for the application, but Time.now uses server time zone instead
+  of using set config.time_zone. So, in order to use application time zone we need to use Time.current/Time.zone.now.
 
-    [Abhishek Jain](https://github.com/spree/spree/pull/6761)
+  [Abhishek Jain](https://github.com/spree/spree/pull/6761)
 
-* Removed `Order#has_available_shipment`, which was unnecessary since it always returned nil
+- Removed `Order#has_available_shipment`, which was unnecessary since it always returned nil
 
-    [VinSol](https://github.com/spree/spree/pull/7007)
+  [VinSol](https://github.com/spree/spree/pull/7007)
 
-* (OOS) Out of Stock Product page: better handling of cart form user experience
+- (OOS) Out of Stock Product page: better handling of cart form user experience
 
-    [Spark Solutions](https://github.com/spree/spree/pull/6970)
+  [Spark Solutions](https://github.com/spree/spree/pull/6970)
 
-* Spree Command Installer won't lock you to a specific Spree patch version, we'll produce eg. `gem 'spree', '~> 3.1.0'` for easier updating
+- Spree Command Installer won't lock you to a specific Spree patch version, we'll produce eg. `gem 'spree', '~> 3.1.0'` for easier updating
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7018)
+  [Spark Solutions](https://github.com/spree/spree/pull/7018)
 
-* Spree Auth Devise & Spree Gateway available from RubyGems
+- Spree Auth Devise & Spree Gateway available from RubyGems
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7047)
+  [Spark Solutions](https://github.com/spree/spree/pull/7047)
 
-* Added `/forbidden` path
+- Added `/forbidden` path
 
-    [Faruk Aydin & Spark Solutions](https://github.com/spree/spree/pull/6991)
+  [Faruk Aydin & Spark Solutions](https://github.com/spree/spree/pull/6991)
 
-* Changed `before_filter` to `before_action`
+- Changed `before_filter` to `before_action`
 
-    [VinSol](https://github.com/spree/spree/pull/7114)
+  [VinSol](https://github.com/spree/spree/pull/7114)
 
-* Additional database indexes for better performance
+- Additional database indexes for better performance
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7098)
+  [Spark Solutions](https://github.com/spree/spree/pull/7098)
 
-* Removed `Order#shipping_method_id` column
+- Removed `Order#shipping_method_id` column
 
-    [VinSol](https://github.com/spree/spree/pull/6966)
+  [VinSol](https://github.com/spree/spree/pull/6966)
 
-* Added `OrderContents#remove_line_item` method
+- Added `OrderContents#remove_line_item` method
 
-    [wuboy0307](https://github.com/spree/spree/pull/6934)
+  [wuboy0307](https://github.com/spree/spree/pull/6934)
 
-* Ensure that Order#guest_token is unique
+- Ensure that Order#guest_token is unique
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7184)
+  [Spark Solutions](https://github.com/spree/spree/pull/7184)
 
-* Added missing views for image, option_type, option_value API controllers
+- Added missing views for image, option_type, option_value API controllers
 
-    [Alex B.](https://github.com/spree/spree/pull/7159)
+  [Alex B.](https://github.com/spree/spree/pull/7159)
 
-* Renamed `Order#update!` to `update_with_updater!` as it conflicts with rails `update!` method, also deprecate current update! method
+- Renamed `Order#update!` to `update_with_updater!` as it conflicts with rails `update!` method, also deprecate current update! method
 
-    [VinSol](https://github.com/spree/spree/pull/7144)
+  [VinSol](https://github.com/spree/spree/pull/7144)
 
-* Removed `Calculator#register` method
+- Removed `Calculator#register` method
 
-    [VinSol](https://github.com/spree/spree/pull/7001)
+  [VinSol](https://github.com/spree/spree/pull/7001)
 
-* Added HTML5 Product Microdata information
+- Added HTML5 Product Microdata information
 
-    [Rehan Jaffer](https://github.com/spree/spree/pull/6986)
+  [Rehan Jaffer](https://github.com/spree/spree/pull/6986)
 
-* Moved user class extensions to a module
+- Moved user class extensions to a module
 
-    [Alessandro Lepore](https://github.com/spree/spree/pull/6740)
+  [Alessandro Lepore](https://github.com/spree/spree/pull/6740)
 
-* Added caching for default store and current tracker
+- Added caching for default store and current tracker
 
-    [wuboy0307](https://github.com/spree/spree/pull/6671) & [Spark Solutions](https://github.com/spree/spree/pull/7223)
+  [wuboy0307](https://github.com/spree/spree/pull/6671) & [Spark Solutions](https://github.com/spree/spree/pull/7223)
 
-* Added `destroy` functionality to `refund_reason` and `return_authorization_reason`
+- Added `destroy` functionality to `refund_reason` and `return_authorization_reason`
 
-    [VinSol](https://github.com/spree/spree/pull/7049)
+  [VinSol](https://github.com/spree/spree/pull/7049)
 
-* Deprecated `Spree::Validations::DbMaximumLengthValidator`, added `DbMaximumLengthValidator` instead
+- Deprecated `Spree::Validations::DbMaximumLengthValidator`, added `DbMaximumLengthValidator` instead
 
-    [VinSol](https://github.com/spree/spree/pull/7062)
+  [VinSol](https://github.com/spree/spree/pull/7062)
 
-* Deprecated Spree CMD installer in favour of standard gem-like installation process
+- Deprecated Spree CMD installer in favour of standard gem-like installation process
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7263)
+  [Spark Solutions](https://github.com/spree/spree/pull/7263)
