--- a/guides/src/content/release_notes/3_2_0.md
+++ b/guides/src/content/release_notes/3_2_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 3.2.0
 section: release_notes
+order: 5
 ---
 
 ## Major/New Features
@@ -28,9 +29,9 @@ Contributed by [Vinsol](https://github.com/spree/spree/pull/7684)
 
 Spree now passes more meaningful information into Google Analytics when adding Products to Cart like:
 
-* product category name
-* product brand name
-* variant description
+- product category name
+- product brand name
+- variant description
 
 Contributed by [Spark Solutions](https://github.com/spree/spree/pull/7727)
 
@@ -119,7 +120,6 @@ rails spree_gateway:install:migrations
 rails db:migrate
 ```
 
-
 ### Other Gotchas
 
 #### Ruby >= 2.2.2 required
@@ -139,141 +139,142 @@ You can view the full changes using [Github Compare](https://github.com/spree/sp
 
 ## Noteworthy Changes
 
-* Removed previously deprecated Spree CMD installer
+- Removed previously deprecated Spree CMD installer
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7278)
+  [Spark Solutions](https://github.com/spree/spree/pull/7278)
 
-* Removed unused `Spree::StoreController#apply_coupon_code` action
+- Removed unused `Spree::StoreController#apply_coupon_code` action
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7284)
+  [Spark Solutions](https://github.com/spree/spree/pull/7284)
 
-* Removed `Admin::SearchController` and pointed Admin Panel search actions to API endpoints
+- Removed `Admin::SearchController` and pointed Admin Panel search actions to API endpoints
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7444)
+  [Spark Solutions](https://github.com/spree/spree/pull/7444)
 
-* Removed previously deprecated `Spree::ProductsHelper::line_item_description`
+- Removed previously deprecated `Spree::ProductsHelper::line_item_description`
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7283)
+  [Spark Solutions](https://github.com/spree/spree/pull/7283)
 
-* Removed unused method  `Spree::Admin::BaseHelper#attribute_name_for`
+- Removed unused method `Spree::Admin::BaseHelper#attribute_name_for`
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7282)
+  [Spark Solutions](https://github.com/spree/spree/pull/7282)
 
-* Removed unused `Spree::Admin::InventorySettingsHelper`
+- Removed unused `Spree::Admin::InventorySettingsHelper`
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7282)
+  [Spark Solutions](https://github.com/spree/spree/pull/7282)
 
-* Removed unused `Spree::Admin::TablesHelper`
+- Removed unused `Spree::Admin::TablesHelper`
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7282)
+  [Spark Solutions](https://github.com/spree/spree/pull/7282)
 
-* Removed unused `Spree::Admin::ProductsHelper`
+- Removed unused `Spree::Admin::ProductsHelper`
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7282)
+  [Spark Solutions](https://github.com/spree/spree/pull/7282)
 
-* Removed unused method  `Spree::Admin::NavigationHelper#collapse_sidebar_link`
+- Removed unused method `Spree::Admin::NavigationHelper#collapse_sidebar_link`
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7282)
+  [Spark Solutions](https://github.com/spree/spree/pull/7282)
 
-* Removed unused method  `Spree::Admin::NavigationHelper#configurations_menu_item`
+- Removed unused method `Spree::Admin::NavigationHelper#configurations_menu_item`
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7282)
+  [Spark Solutions](https://github.com/spree/spree/pull/7282)
 
-* Moved `Spree::PromotionRulesHelper` to `Spree::Admin::PromotionRulesHelper`
+- Moved `Spree::PromotionRulesHelper` to `Spree::Admin::PromotionRulesHelper`
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7282)
+  [Spark Solutions](https://github.com/spree/spree/pull/7282)
 
-* Fixed permissions for Product associations management in Admin Panel
+- Fixed permissions for Product associations management in Admin Panel
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7663)
+  [Spark Solutions](https://github.com/spree/spree/pull/7663)
 
-* ActiveMerchant updated to `~> 1.59`
+- ActiveMerchant updated to `~> 1.59`
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7616)
+  [Spark Solutions](https://github.com/spree/spree/pull/7616)
 
-* Added `created_at` to Variant model
+- Added `created_at` to Variant model
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7627)
+  [Spark Solutions](https://github.com/spree/spree/pull/7627)
 
-* Additional Admin Panel usability fixes
+- Additional Admin Panel usability fixes
 
-    [Nimish Gupta](https://github.com/spree/spree/pull/7551, https://github.com/spree/spree/pull/7552. https://github.com/spree/spree/pull/7553)
+  [Nimish Gupta](https://github.com/spree/spree/pull/7551, https://github.com/spree/spree/pull/7552. https://github.com/spree/spree/pull/7553)
 
-* Allow order to transit from resumed state to returned state
+- Allow order to transit from resumed state to returned state
 
-    [Nimish Gupta](https://github.com/spree/spree/pull/7554)
+  [Nimish Gupta](https://github.com/spree/spree/pull/7554)
 
-* Changed `state` translation key in Admin Panel to `status`
+- Changed `state` translation key in Admin Panel to `status`
 
-    [orbit-dna](https://github.com/spree/spree/pull/7557)
+  [orbit-dna](https://github.com/spree/spree/pull/7557)
 
-* Fixed API pagination `per_page` and `current_page` values (now always returned as integer)
+- Fixed API pagination `per_page` and `current_page` values (now always returned as integer)
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7550)
+  [Spark Solutions](https://github.com/spree/spree/pull/7550)
 
-* Display Spree version in Admin Panel
+- Display Spree version in Admin Panel
 
-    [Spark Solutions](https://github.com/spree/spree/pull/7685)
+  [Spark Solutions](https://github.com/spree/spree/pull/7685)
 
-    By default, it's displayed only for Admin users who can manage the current Store, but can be disabled altogether by changing preferences:
+  By default, it's displayed only for Admin users who can manage the current Store, but can be disabled altogether by changing preferences:
 
-    ```
-    Spree::Config[:admin_show_version] = false
-    ```
-    in `config/initializers/spree.rb`
+  ```
+  Spree::Config[:admin_show_version] = false
+  ```
 
-* New preferences for Admin Panel `per_page` settings, default value for all of them is now
+  in `config/initializers/spree.rb`
+
+- New preferences for Admin Panel `per_page` settings, default value for all of them is now
   `Kaminari.config.default_per_page` (by default `25`)
 
   [Spark Solutions](https://github.com/spree/spree/pull/7730)
 
-  * `orders_per_page` renamed to `admin_orders_per_page`
-  * `properties_per_page` renamed to `properties_per_page`
-  * `promotions_per_page` renamed to `admin_promotions_per_page`
-  * `customer_returns_per_page` renamed to `admin_customer_returns_per_page`
-  * added `admin_users_per_page`
+  - `orders_per_page` renamed to `admin_orders_per_page`
+  - `properties_per_page` renamed to `properties_per_page`
+  - `promotions_per_page` renamed to `admin_promotions_per_page`
+  - `customer_returns_per_page` renamed to `admin_customer_returns_per_page`
+  - added `admin_users_per_page`
 
-* Removed unused `Spree::Admin::UsersController#json_data` method
+- Removed unused `Spree::Admin::UsersController#json_data` method
 
   [Spark Solutions](https://github.com/spree/spree/pull/7731)
 
-* Added validation errors and other UX fixes for return process in Admin Panel
+- Added validation errors and other UX fixes for return process in Admin Panel
 
   [Spark Solutions](https://github.com/spree/spree/pull/7728)
 
-* Added GitGub issue template
+- Added GitGub issue template
 
   [Josh Powell](https://github.com/spree/spree/pull/7721)
 
-* Added revert and deactivate methods to allow actions to take place when a
-Promotion is removed from the Cart
+- Added revert and deactivate methods to allow actions to take place when a
+  Promotion is removed from the Cart
 
   [Joe Connor](https://github.com/spree/spree/pull/7705)
 
-* Use `Spree::Money` to display values in Sales Total report
+- Use `Spree::Money` to display values in Sales Total report
 
   [Spark Solutions](https://github.com/spree/spree/pull/7702)
 
-* Fixed filtering out Products by `discontinue_on` in Admin Panel products index
+- Fixed filtering out Products by `discontinue_on` in Admin Panel products index
 
   [Joe Swann](https://github.com/spree/spree/pull/7686)
 
-* Allow title separator to be customized
+- Allow title separator to be customized
 
   [Ryan Siddle](https://github.com/spree/spree/pull/7672)
 
-* Additional fixes for Spree mounted in other then default `/` mountpoint
+- Additional fixes for Spree mounted in other then default `/` mountpoint
 
   [Spark Solutions](https://github.com/spree/spree/pull/7725)
 
-* Search for current Order in Frontend using guest token only
+- Search for current Order in Frontend using guest token only
 
   [Björn Andersson](https://github.com/spree/spree/pull/7626)
 
-* Deprecated `Spree::Calculator::FreeShipping`
+- Deprecated `Spree::Calculator::FreeShipping`
 
   [Spark Solutions](https://github.com/spree/spree/pull/7753)
 
-* Added promotion rule for shipping country
+- Added promotion rule for shipping country
 
   [Spark Solutions](https://github.com/spree/spree/pull/7542)
