--- a/guides/src/content/release_notes/3_3_0.md
+++ b/guides/src/content/release_notes/3_3_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 3.3.0
 section: release_notes
+order: 4
 ---
 
 ## Major/New Features
@@ -33,13 +34,13 @@ Contributed by [Spark Solutions](https://github.com/spree/spree/pull/8157)
 
 We've added unique indexes and uniqueness validation on `number` field for those models:
 
-* `CustomerReturn`
-* `Order`
-* `Payment`
-* `Reimbursement`
-* `ReturnAuthorization`
-* `Shipment`
-* `StockTransfer`
+- `CustomerReturn`
+- `Order`
+- `Payment`
+- `Reimbursement`
+- `ReturnAuthorization`
+- `Shipment`
+- `StockTransfer`
 
 This change will fix records with duplicate numbers. Migration scripts we're take care of that.
 
@@ -53,16 +54,15 @@ Besides number fields we've added multiple regular & unique indexes that were mi
 
 Contributed by [Spark Solutions](https://github.com/spree/spree/pull/7905)
 
-
 ### Add `quantity` to inventory units and split on demand
 
 Optimising Shipments and Inventory Units.
 
-* Creates a single `inventory_unit` per `state`, per `line_item`, per `stock_location` with a `quantity` field indicating inventory units in that state.
-* Adds a `return_quantity` field in `ReturnAuthorization` indicating the number of units to be returned/exchanged.
-* Split inventory unit to extract the portion/quantity that needs to be returned. This might be further split depending upon stock availability at the time of generating return.
-* Changes prioritizer and adjuster to maximise the number of `on_hand` items from available stocks in multiple `stock_locations`
-* Change `splitters/weight.rb` to use **Worst Fit** algo.
+- Creates a single `inventory_unit` per `state`, per `line_item`, per `stock_location` with a `quantity` field indicating inventory units in that state.
+- Adds a `return_quantity` field in `ReturnAuthorization` indicating the number of units to be returned/exchanged.
+- Split inventory unit to extract the portion/quantity that needs to be returned. This might be further split depending upon stock availability at the time of generating return.
+- Changes prioritizer and adjuster to maximise the number of `on_hand` items from available stocks in multiple `stock_locations`
+- Change `splitters/weight.rb` to use **Worst Fit** algo.
 
 Contributed by [Vinsol](https://github.com/spree/spree/pull/7790)
 
@@ -145,7 +145,6 @@ end
 
 Spree 3.3 comes with paperclip 5.1 support so if you're using Amazon S3 storage you need to change in your Gemfile, from:
 
-
 ```ruby
 gem 'aws-sdk', '< 2.0'
 ```
@@ -166,7 +165,7 @@ Seel also [RubyThursday episode](https://rubythursday.com/episodes/ruby-snack-27
 #### Add jquery.validate to your project if you've used it directly from Spree
 
 If your application.js file includes line
- `//= require jquery.validate/jquery.validate.min`
+`//= require jquery.validate/jquery.validate.min`
 you will need to add it this file manually to your project because this library was
 [removed from Spree in favour of native HTML5 validation](https://github.com/spree/spree/pull/8173).
 
@@ -182,138 +181,138 @@ You can view the full changes using [Github Compare](https://github.com/spree/sp
 
 ## Noteworthy Changes
 
-* Removed `jquery.validate` in favour of HTML5 validation for address on checkout
+- Removed `jquery.validate` in favour of HTML5 validation for address on checkout
 
   [Spark Solutions](https://github.com/spree/spree/pull/8173)
 
-* Remove frontend routes from core, to allow usage without default Spree frontend
+- Remove frontend routes from core, to allow usage without default Spree frontend
 
   [Spark Solutions](https://github.com/spree/spree/pull/8172)
 
-* Use HTML5 `email_field` on frontend checkout
+- Use HTML5 `email_field` on frontend checkout
 
   [Spark Solutions](https://github.com/spree/spree/pull/8160)
 
-* Frontend views cleanup
+- Frontend views cleanup
 
   [Spark Solutions](https://github.com/spree/spree/pull/8174)
 
-* `acts_as_list` index starts from 1
+- `acts_as_list` index starts from 1
 
   [Sai Ram Kunala](https://github.com/spree/spree/pull/7785) & [Jonathan Kelley](https://github.com/spree/spree/issues/7996)
 
-* API: Remove core dependency on api user db column
+- API: Remove core dependency on api user db column
 
   [Viktor Fonic](https://github.com/spree/spree/pull/7912)
 
-* Added missing permission checks in Admin Panel
+- Added missing permission checks in Admin Panel
 
   [Vinsol](https://github.com/spree/spree/pull/8076)
 
-* Loosen project dependency on `FriendlyId` in Admin Panel and API endpoints
+- Loosen project dependency on `FriendlyId` in Admin Panel and API endpoints
 
   [Spark Solutions](https://github.com/spree/spree/pull/8072)
 
-* Admin has to confirm clear cache in Admin Panel
+- Admin has to confirm clear cache in Admin Panel
 
   [Spark Solutions](https://github.com/spree/spree/pull/8162)
 
-* Added uniqueness validation added on promotion's code
+- Added uniqueness validation added on promotion's code
 
   [Vinsol](https://github.com/spree/spree/pull/8067)
 
-* Restrict deletion of payment method if associated with payments or credit cards
+- Restrict deletion of payment method if associated with payments or credit cards
 
   [Vinsol](https://github.com/spree/spree/pull/8055)
 
-* Uniqueness validation added on Taxonomy's name and Taxon's permalink
+- Uniqueness validation added on Taxonomy's name and Taxon's permalink
 
   [Vinsol](https://github.com/spree/spree/pull/8050)
 
-* Admin Panel `field_container` now supports options like content_tag does
+- Admin Panel `field_container` now supports options like content_tag does
 
   [Fabrizio Monti](https://github.com/spree/spree/pull/8163)
 
-* Simplify `EmailValidator` regexp to align with `Devise.email_regexp`
+- Simplify `EmailValidator` regexp to align with `Devise.email_regexp`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8171)
 
-* Schema.org fixes for products microformat data
+- Schema.org fixes for products microformat data
 
   [Spark Solutions](https://github.com/spree/spree/pull/8039)
 
-* Allow valid image types to be overridden without deleting validations for `Spree::Image`
+- Allow valid image types to be overridden without deleting validations for `Spree::Image`
 
   [Tom Chipchase](https://github.com/spree/spree/pull/8176)
 
-* Updated `paperclip` to `~> 5.1.0`
+- Updated `paperclip` to `~> 5.1.0`
 
   [Josh Powell](https://github.com/spree/spree/pull/7858)
 
-* Updated `acts-as-taggable-on` to `5.0`
+- Updated `acts-as-taggable-on` to `5.0`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8015)
 
-* Updated `FriendlyId` to `5.2`
+- Updated `FriendlyId` to `5.2`
 
   [Zeke Gabrielse](https://github.com/spree/spree/pull/8005)
 
-* Loosen ActiveMerchant dependency (`~> 1.67`)
+- Loosen ActiveMerchant dependency (`~> 1.67`)
 
   [Justin Grubbs](https://github.com/spree/spree/pull/8081)
 
-* Updated `cancancan` to `2.0`
+- Updated `cancancan` to `2.0`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8009)
 
-* Updated `jquery-ui-rails` to `6.0.1` & removed unused assets
+- Updated `jquery-ui-rails` to `6.0.1` & removed unused assets
 
   [Spark Solutions](https://github.com/spree/spree/pull/8000)
 
-* Removing mutant dependency
+- Removing mutant dependency
 
   [Spark Solutions](https://github.com/spree/spree/pull/8013)
 
-* Updated `state_machines-activerecord` to `~> 0.5`
+- Updated `state_machines-activerecord` to `~> 0.5`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8083)
 
-* Removed previously deprecated `LineItem#invalid_quantity_check`
+- Removed previously deprecated `LineItem#invalid_quantity_check`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8040)
 
-* Removed deprecated automatic `UserMethods` injection
+- Removed deprecated automatic `UserMethods` injection
 
   [Spark Solutions](https://github.com/spree/spree/pull/8031)
 
-* Deprecated `Spree::Calculator::PercentPerItem` & removed `Spree::Calculator::FreeShipping`
+- Deprecated `Spree::Calculator::PercentPerItem` & removed `Spree::Calculator::FreeShipping`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8030)
 
-* Removed minimum length validation on product slug
+- Removed minimum length validation on product slug
 
   [Viktor Fonic](https://github.com/spree/spree/pull/8028)
 
-* Removed `font-awesome-rails` dependency
+- Removed `font-awesome-rails` dependency
 
   [Spark Solutions](https://github.com/spree/spree/pull/7949)
 
-* Deprecate `Shipment#editable_by?` & `Shipment#send_shipped_email`
+- Deprecate `Shipment#editable_by?` & `Shipment#send_shipped_email`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8106)
 
-* Deprecate `Variant#having_orders` & `Variant#on_backorder`
+- Deprecate `Variant#having_orders` & `Variant#on_backorder`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8225)
 
-* Deprecate `DelegateBelongsTo`
+- Deprecate `DelegateBelongsTo`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8179)
 
-* Removed unused `jquery.migrate`, `normalize` & `skeleton` assets from Core
+- Removed unused `jquery.migrate`, `normalize` & `skeleton` assets from Core
 
   [Spark Solutions](https://github.com/spree/spree/pull/8185)
 
-* Removed `shoulda-matchers` dependency
+- Removed `shoulda-matchers` dependency
 
   [Spark Solutions](https://github.com/spree/spree/pull/8158)
