--- a/guides/src/content/release_notes/3_4_0.md
+++ b/guides/src/content/release_notes/3_4_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 3.4.0
 section: release_notes
+order: 3
 ---
 
 ## Major/New Features
@@ -122,7 +123,6 @@ please run this to migrate your icons:
 rails db:migrate_taxon_icons
 ```
 
-
 #### Noteworthy Changes
 
 Also please review each of the noteworthy changes, and ensure your customizations
@@ -135,54 +135,54 @@ You can view the full changes using [Github Compare](https://github.com/spree/sp
 
 ## Noteworthy Changes
 
-* Moved Admin Panel account menu into Spree core and redesigning it
+- Moved Admin Panel account menu into Spree core and redesigning it
 
   [Spark Solutions](https://github.com/spree/spree/pull/8249)
 
-* Better multi store support for Spree frontend (use `current_store` with `last_incomplete_spree_order`)
+- Better multi store support for Spree frontend (use `current_store` with `last_incomplete_spree_order`)
 
   [Alexandre Ferraille](https://github.com/spree/spree/pull/8078)
 
-* Added OptionTypes & OptionValues API V1 Documentation
+- Added OptionTypes & OptionValues API V1 Documentation
 
   [Yatindra Rao](https://github.com/spree/spree/pull/8394)
 
-* Removed previously deprecated `Shipment#editable_by?` & `Shipment#send_shipped_email`
+- Removed previously deprecated `Shipment#editable_by?` & `Shipment#send_shipped_email`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8276)
 
-* Removed previously deprecated `Variant#having_orders` & `Variant#on_backorder`
+- Removed previously deprecated `Variant#having_orders` & `Variant#on_backorder`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8277)
 
-* Removed previously deprecated `DelegateBelongsTo`
+- Removed previously deprecated `DelegateBelongsTo`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8275)
 
-* Updated `Address#require_phone?` to use `address_requires_phone` preference
+- Updated `Address#require_phone?` to use `address_requires_phone` preference
 
   [Spark Solutions](https://github.com/spree/spree/pull/8290)
 
-* Performance optimization - replaced `pluck.sum` and `map.sum` with `sum`
+- Performance optimization - replaced `pluck.sum` and `map.sum` with `sum`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8283)
 
-* Performance optimization - replaced `.count > 0` with `.exists?`
+- Performance optimization - replaced `.count > 0` with `.exists?`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8282)
 
-* Removed previously deprecated `Calculator::PercentPerItem`
+- Removed previously deprecated `Calculator::PercentPerItem`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8314)
 
-* Removed deprecated `StoreHelper` from frontend
+- Removed deprecated `StoreHelper` from frontend
 
   [Spark Solutions](https://github.com/spree/spree/pull/8316)
 
-* Removed deprecated `TestingSupport::MicroData`
+- Removed deprecated `TestingSupport::MicroData`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8315)
 
-* Deprecated `ContentController#show`
+- Deprecated `ContentController#show`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8379)
