--- a/guides/src/content/release_notes/3_6_0.md
+++ b/guides/src/content/release_notes/3_6_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 3.6.0
 section: release_notes
+order: 1
 ---
 
 ## Major/New Features
@@ -35,6 +36,7 @@ Contributed by [Spark Solutions](https://github.com/spree/spree/pull/8743)
 ## Installation
 
 ### Add Spree gems to Gemfile
+
 ```ruby
 gem 'spree', '~> 3.6.1'
 gem 'spree_auth_devise', '~> 3.3'
