--- a/guides/src/content/release_notes/0_10_0.md
+++ b/guides/src/content/release_notes/0_10_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 0.10.0
 section: release_notes
+order: 24
 ---
 
 # Upgrade Notes
@@ -12,6 +13,7 @@ section: release_notes
 Always advisable!
 
 ### Perform the standard upgrade command
+
 ```bash
 spree —update
 ```
@@ -24,7 +26,7 @@ rm -rf config/initializers/compass.rb
 
 h5. Remove defunct contents of public dirs
 
-```bash
+````bash
 rm -rf public/javascripts/
 rm -rf public/stylesheets/
 rm -rf public/images/```
@@ -53,7 +55,7 @@ warnings. You may see the following message in your console:
 ```bash
 DEPRECATION: require "activerecord" is deprecated and will be removed
 in Rails 3. Use require "active_record" instead.
-```
+````
 
 Remove all instances of `require 'activerecord'` from your Rakefiles
 
@@ -86,7 +88,7 @@ update the occurrences.
 
 ### Theme Support
 
-Spree now has basic support for theming.  Themes in Spree are implemented as "extensions":extensions.html.  All of the default views in Spree have now been abstracted into a default theme.  You can override all or parts of the default theme in a new theme.  Themes have their own generator and are created as follows:
+Spree now has basic support for theming. Themes in Spree are implemented as "extensions":extensions.html. All of the default views in Spree have now been abstracted into a default theme. You can override all or parts of the default theme in a new theme. Themes have their own generator and are created as follows:
 
 ```bash
 script/generate theme foo
@@ -94,15 +96,17 @@ script/generate theme foo
 
 You can read more about themes in the very extensive [customization guide](http://guides.spreecommerce.org/legacy/0-11-x/customization_overview.html)
 
-***
-Don't panic if you have already customized Spree views in your site extension for a previous release of Spree.  These view customizations should continue to work as long as they are loaded after the default theme extension.
-***
+---
+
+Don't panic if you have already customized Spree views in your site extension for a previous release of Spree. These view customizations should continue to work as long as they are loaded after the default theme extension.
+
+---
 
 ### Named Scopes and Product Groups
 
-In various applications, we need to create lists of products according to various criteria, e.g. all products in taxon X, or all products costing less than $20, or composite criteria like all products costing more than $100 that have brand Y.  Spree provides several so-called named scopes, which provide filtering by various aspects of the basic data, some of which can be chained or composed together for more complex filters.
+In various applications, we need to create lists of products according to various criteria, e.g. all products in taxon X, or all products costing less than $20, or composite criteria like all products costing more than $100 that have brand Y. Spree provides several so-called named scopes, which provide filtering by various aspects of the basic data, some of which can be chained or composed together for more complex filters.
 
-Named scopes can also be combined.  The following chain of scopes lists the products that are active and with a price between $18 and $20.
+Named scopes can also be combined. The following chain of scopes lists the products that are active and with a price between $18 and $20.
 
 ```bash
 Product.active.price_between(18,20)
@@ -112,48 +116,49 @@ Product groups allow for the defining and naming groups of products for various 
 
 Please see the documentaiton for a more complete explanation of [named scopes and product groups](http://guides.spreecommerce.org/legacy/0-11-x/scopes_and_groups.html).
 
-
 ### Improvements to Payment Gateway Configuration
 
-This release contains significant improvements to how payment gateways are configured.  Gateways are no longer supported by database migrations, this scheme has been replaced by Active Record models that extend `Gateway`.  The configuration of gateways is now done through standard Spree `preference configuration`.  The [documentation](http://guides.spreecommerce.org/legacy/0-11-x/payment_gateways.html) has also been updated and contains a more detailed explanation.
+This release contains significant improvements to how payment gateways are configured. Gateways are no longer supported by database migrations, this scheme has been replaced by Active Record models that extend `Gateway`. The configuration of gateways is now done through standard Spree `preference configuration`. The [documentation](http://guides.spreecommerce.org/legacy/0-11-x/payment_gateways.html) has also been updated and contains a more detailed explanation.
 
-One major improvement is that it is now possible to configure multiple gateways for each of your Rails environments.  Its also possible to use the live production server in development mode when previously, you were required to run in test mode.  One unfortunate side effect of this improvement is that your existing gateway configuration information will be lost and you will need to reconfigure your gateway in the admin interface.
+One major improvement is that it is now possible to configure multiple gateways for each of your Rails environments. Its also possible to use the live production server in development mode when previously, you were required to run in test mode. One unfortunate side effect of this improvement is that your existing gateway configuration information will be lost and you will need to reconfigure your gateway in the admin interface.
 
 !!!
 You should make a note of your gateway configuration setting before upgrading since you will need to reconfigure your gateway when you're done.
 !!!
 
-This approach to implementing and configuring gateways is extremely flexible.  It makes it trivial to implement a new gateway that is already supported by Active Merchant.  There are other useful benefits to this approach that a developer may be interested in knowing.
+This approach to implementing and configuring gateways is extremely flexible. It makes it trivial to implement a new gateway that is already supported by Active Merchant. There are other useful benefits to this approach that a developer may be interested in knowing.
 
 #### Support of Non Active Merchant Gateways
 
-This architecture allows Spree to support gateways that are not officially supported by Active Merchant.  Many times a new gateway is donated by someone in the community but its languishing in the queue waiting for someone to test and accept the patch.  You have the option of taking that code (or writing your own from scratch) and implementing it within Spree.  Instead of delegating to an Active Merchant class, you can simply implement that functionality yourself.  You could also include the new gateway code from an Active Merchant fork inside your implementation and delegate the standard authorize, capture, etc operations to it.
+This architecture allows Spree to support gateways that are not officially supported by Active Merchant. Many times a new gateway is donated by someone in the community but its languishing in the queue waiting for someone to test and accept the patch. You have the option of taking that code (or writing your own from scratch) and implementing it within Spree. Instead of delegating to an Active Merchant class, you can simply implement that functionality yourself. You could also include the new gateway code from an Active Merchant fork inside your implementation and delegate the standard authorize, capture, etc operations to it.
 
 #### Ability to "Patch" Active Merchant Gateways
 
-We've noticed that sometimes it takes a while for a crucial Active Merchant patch to be applied.  That's certainly understandable, the [Shopify](http://shopify.com) guys have a business to run and its probably not a high priority for them to make sure that the latest obscure gateway patch is applied in a timely fashion.  Fortunately, the Spree approach to wrapping these gateways provides you with a convenient option.
+We've noticed that sometimes it takes a while for a crucial Active Merchant patch to be applied. That's certainly understandable, the [Shopify](http://shopify.com) guys have a business to run and its probably not a high priority for them to make sure that the latest obscure gateway patch is applied in a timely fashion. Fortunately, the Spree approach to wrapping these gateways provides you with a convenient option.
 
-Lets say there is a bug with the +authorize+ method.  You could simply provide an implementation of the gateway that has the patched version of the `authorize` method and then delegates to the Active Merchant class for everything else (since that works just fine.)
+Lets say there is a bug with the +authorize+ method. You could simply provide an implementation of the gateway that has the patched version of the `authorize` method and then delegates to the Active Merchant class for everything else (since that works just fine.)
 
 #### Additional Functionality Beyond Active Merchant
 
-Another benefit of the architecture is that it makes it possible for Spree to provide additional common functionality that was not envisioned by Active Merchant.  Specifically, it is possible to provide an abstraction for storing credit card profiles to be used with recurring payments.  There's a good reason for Active Merchant to not care about this functionality.  Its designed for people who just want to drop a single gateway provider into their application.  Most programmers don't need three different gateways at once.  Spree is a specialized use case.  Its providing multiple gateways for you to choose from and so its desirable to have a standard method for operations such as this.
+Another benefit of the architecture is that it makes it possible for Spree to provide additional common functionality that was not envisioned by Active Merchant. Specifically, it is possible to provide an abstraction for storing credit card profiles to be used with recurring payments. There's a good reason for Active Merchant to not care about this functionality. Its designed for people who just want to drop a single gateway provider into their application. Most programmers don't need three different gateways at once. Spree is a specialized use case. Its providing multiple gateways for you to choose from and so its desirable to have a standard method for operations such as this.
 
-***
+---
+
 Recurring payments are not yet supported in Spree although there are plans to provide this in the near future.
-***
+
+---
 
 ### Multi Step Checkout
 
 #### Checkout Steps
 
-Spree has returned to a multi step checkout process.  The following checkout steps are defined by default.
+Spree has returned to a multi step checkout process. The following checkout steps are defined by default.
 
-* Registration (Optional)
-* Address Information
-* Delivery Options (Shipping Method)
-* Payment
-* Confirm
+- Registration (Optional)
+- Address Information
+- Delivery Options (Shipping Method)
+- Payment
+- Confirm
 
 There is also a default progress "train" which shows the current step and allows you to jump back to a previous step by clicking on it.
 
@@ -161,17 +166,17 @@ There is also a default progress "train" which shows the current step and allows
 If you have a site running on a previous verison of Spree, your checkout process will likely need to be upgraded. The good news is the new approach is much easier to customize.
 !!!
 
-The checkout process is highly customizable - in fact, this is the reasoning behind moving away from the single step checkout.  There is far less code hidden in javascript and each checkout step has its own partial.  See the [checkout documentation](http://guides.spreecommerce.org/legacy/0-11-x/checkout.html) for mor information on how to customize the checkout.
+The checkout process is highly customizable - in fact, this is the reasoning behind moving away from the single step checkout. There is far less code hidden in javascript and each checkout step has its own partial. See the [checkout documentation](http://guides.spreecommerce.org/legacy/0-11-x/checkout.html) for mor information on how to customize the checkout.
 
 #### Countries Available for Shipping and Billing
 
-The mechanism for determining the list of billing and shipping countries has changed.  Prior to this release, there was no way to limit the billing countries and shipping countries were limited by the countries included in the shipping zones that were configured.  The new approach is to simply use all countries defined in the database by default.
+The mechanism for determining the list of billing and shipping countries has changed. Prior to this release, there was no way to limit the billing countries and shipping countries were limited by the countries included in the shipping zones that were configured. The new approach is to simply use all countries defined in the database by default.
 
-The list can be limited to a specific set of countries by configuring the new `:checkout_zone` preference and setting its value to the name of a [zone](http://guides.spreecommerce.org/legacy/0-11-x/zones.html) containing the countries you wish to use.  This should handle most cases where the list of billing and shipping countries are the same.  You can always customize the code via extension if this does not suit your needs.
+The list can be limited to a specific set of countries by configuring the new `:checkout_zone` preference and setting its value to the name of a [zone](http://guides.spreecommerce.org/legacy/0-11-x/zones.html) containing the countries you wish to use. This should handle most cases where the list of billing and shipping countries are the same. You can always customize the code via extension if this does not suit your needs.
 
 #### State Machine
 
-The Checkout model now has its own [state machine](https://github.com/pluginaweek/state_machine).  This allows for easier customization of the checkout process.  It is now much simpler to add or remove a step to the default checkout process. Here's an example which avoids the address step in checkout.
+The Checkout model now has its own [state machine](https://github.com/pluginaweek/state_machine). This allows for easier customization of the checkout process. It is now much simpler to add or remove a step to the default checkout process. Here's an example which avoids the address step in checkout.
 
 ```bash
 class SiteExtension < Spree::Extension
@@ -203,7 +208,7 @@ end
 
 #### Controller Hooks
 
-The*CheckoutController+ now provides its own "hook mechanism" (not to be
+The\*CheckoutController+ now provides its own "hook mechanism" (not to be
 confused with theme hooks) which allow for the developer to perform
 additional logic (or to change the default) logic that is applied during
 the edit and/or update operation for a particular step. The
@@ -252,7 +257,7 @@ are adding Spree support to a `Gateway` you should also implement the
 `create_profile` method. The following is an example of the
 implementation of `create_profile` used in the `AuthorizeNetCim` class:
 
-```ruby
+````ruby
 # Create a new CIM customer profile ready to accept a payment
 def create_profile(creditcard, gateway_options)
  if creditcard.gateway_customer_profile_id.nil?
@@ -441,3 +446,4 @@ for more info.
 
 Workaround: apply the Rails patch by hand, or use MySQL instead if you
 want to try Ruby1.9
+````
