--- a/guides/src/content/release_notes/0_30_0.md
+++ b/guides/src/content/release_notes/0_30_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 0.30.0
 section: release_notes
+order: 23
 ---
 
 # Summary
@@ -12,13 +13,15 @@ documentation is still a work in progress. We'll try to mention the
 highlights here and we'll continue to update the documentation in the
 coming weeks.
 
-***
+---
+
 We're always looking for more help with the Spree documentation.
 If you'd like to offer assistance please contact us on the spree-user
 mailing list and we can give you commit access to the
 [spree-guides](https://github.com/spree/spree-guides) documentation
 project.
-***
+
+---
 
 # Rails Engines
 
@@ -38,13 +41,13 @@ extension](http://spreecommerce.com/legacy/0-30-x/extensions.html#thesiteextensi
 in order to customize the look and feel of the site. One major
 improvement in Spree is that this is no longer necessary. All of the
 content that normally goes in your site extension can now be moved to to
-*Rails.root*.
+_Rails.root_.
 
 ## Extensions are Now Gems
 
 Extensions are now installed as Rubygems. They are also no longer
-deployed to *vendor/extensions*. You need to add the required extensions
-to you *Gemfile*. There is a comprehensive [Extension Guide](/developer/extensions_tutorial) in the
+deployed to _vendor/extensions_. You need to add the required extensions
+to you _Gemfile_. There is a comprehensive [Extension Guide](/developer/extensions_tutorial) in the
 online documentation which can assist you.
 
 As of the time of this release there are only a limited number of
@@ -55,11 +58,13 @@ which extensions are 0.30.x compatible. Check back often because the
 Spree core team will be working on updating the more critical ones
 immediately after the release.
 
-***
+---
+
 Its relatively easy to convert an existing extension into a gem.
 Its suggested you find a 0.30.x compatible extension and study the
 source code for a better idea on how to do this.
-***
+
+---
 
 # Improvements to Payments
 
@@ -79,36 +84,40 @@ state are counted.
 # Simplification of Adjustments
 
 Adjustments have also been dramatically simplified. Instead of having
-the concept of *Charge* and *Credit* we just have the single
-*Adjustment*. What used to be called a *Credit* is now just a negative
-adjustment. Adjustments also now have a *mandatory* attribute. When this
-attribute is *true* the adjustment is always shown when displaying the
+the concept of _Charge_ and _Credit_ we just have the single
+_Adjustment_. What used to be called a _Credit_ is now just a negative
+adjustment. Adjustments also now have a _mandatory_ attribute. When this
+attribute is _true_ the adjustment is always shown when displaying the
 order total, even if the value is zero. All non-mandatory adjustments
 are removed from the order if their value is ever equal to zero.
 
-***
+---
+
 Mandatory adjustments make it easy to show $0 for tax or shipping
 when those cases apply. The thinking is we don't want customers to
 wonder what the shipping cost because its not present - better to show a
 $0 value explicitly.
-***
+
+---
 
 # New Promotion Functionality
 
 Promotion functionality in Spree has been greatly improved. There is a
-new *spree_promo* gem which is included by default when you install
+new _spree_promo_ gem which is included by default when you install
 Spree.
 
 ## Creating a Promotion
 
-A new promotion requires a *name* and *code* attribute. The *code*
+A new promotion requires a _name_ and _code_ attribute. The _code_
 attribute can be used by customers when checking out to "activate" a
 particular promotion.
 
-***
+---
+
 This is standard "coupon code" functionality but you're not
 required to have customers enter codes in order to utilize promotions.
-***
+
+---
 
 ## Promotion Rules
 
@@ -116,16 +125,16 @@ Once a new promotion is created you can create one or more rules for the
 promotion. You can require that all rules for the promotion be satisfied
 or just one of the rules.
 
-Each of the rules is based on a Ruby class that extends *PromotionRule*.
+Each of the rules is based on a Ruby class that extends _PromotionRule_.
 There are four built in rule types for Spree but others can be added via
 extension or directly through your Spree application code.
 
--   **Item Total:** Limit to orders with an item total above a specified
-    amount
--   **Product:** Limit to orders containing one or all of the specified
-    products
--   **User:** Limit to orders made by specific users
--   **First Order:** Limit to the first order by a user
+- **Item Total:** Limit to orders with an item total above a specified
+  amount
+- **Product:** Limit to orders containing one or all of the specified
+  products
+- **User:** Limit to orders made by specific users
+- **First Order:** Limit to the first order by a user
 
 # No More "Vendor Mode"
 
@@ -133,13 +142,15 @@ Spree is deployed as a Rubygem now so the previous system of different
 "boot modes" has been simplified. Spree never needs to be deployed
 inside of your application, even if you're using edge or a custom fork.
 Thanks to Bundler you can reference any version of Spree source directly
-via *Gemfile* and either a physical directory location or a git
+via _Gemfile_ and either a physical directory location or a git
 repository location.
 
-***
+---
+
 See the [Source Guide](http://guides.spreecommerce.org/legacy/0-30-x/source_code.html) for a complete
 understanding of all the changes to the organization of the source code.
-***
+
+---
 
 # Upgrading
 
@@ -182,15 +193,15 @@ application so that its Rails 3 compliant.
 ### Copy Your Legacy Files
 
 Spree no longer requires that you have a "site" extension. This means
-that you should copy all of the files in *vendor/extensions/site* into
-the *app* directory of your new Rails application. This includes the
-contents of the *public* directory.
+that you should copy all of the files in _vendor/extensions/site_ into
+the _app_ directory of your new Rails application. This includes the
+contents of the _public_ directory.
 
-### Add Spree to the *Gemfile*
+### Add Spree to the _Gemfile_
 
 So now you have a new Rails 3.x application and you've moved over your
 custom files. Its time to add the Spree gem into the mix. Edit your
-*Gemfile* and add the following entry:
+_Gemfile_ and add the following entry:
 
 ```ruby
 gem 'spree', '0.30.0'
