--- a/guides/src/content/release_notes/1_0_0.md
+++ b/guides/src/content/release_notes/1_0_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 1.0.0
 section: release_notes
+order: 18
 ---
 
 # Summary
@@ -25,33 +26,33 @@ staging server before attempting in your production environment.
 A difficulty in previous versions of Spree was using it with existing
 applications, as there may have been conflicting class names between the
 Spree engines and the host application. For example, if the host
-application had a *Product* class, then this would cause Spree's
-*Product* class to not load and issues would be encountered.
+application had a _Product_ class, then this would cause Spree's
+_Product_ class to not load and issues would be encountered.
 
 A major change within the 1.0 Release is the namespacing of all classes
 within Spree. This change remedies the above problem in the cleanest
 fashion possible.
 
-Classes such as *Product*, *Variant* and *ProductsController* are now
-*Spree::Product*, *Spree::Variant* and *Spree::ProductsController*.
-Other classes, such as *RedirectLegacyProductUrl*, have undergone one
+Classes such as _Product_, _Variant_ and _ProductsController_ are now
+_Spree::Product_, _Spree::Variant_ and _Spree::ProductsController_.
+Other classes, such as _RedirectLegacyProductUrl_, have undergone one
 more level of namespacing to more clearly represent what areas of Spree
 they are from. This class is now called
-*Spree::Core::RedirectLegacyProductUrl*.
+_Spree::Core::RedirectLegacyProductUrl_.
 
-Constants such as *SpreeCore* and *SpreeAuth* are now *Spree::Core* and
-*Spree::Auth* respectively.
+Constants such as _SpreeCore_ and _SpreeAuth_ are now _Spree::Core_ and
+_Spree::Auth_ respectively.
 
 ## Referencing Spree routes
 
 In previous versions of Spree, due to the lack of namespacing, it was
-possible to reference routing helpers such as *product_url* as-is in
+possible to reference routing helpers such as _product_url_ as-is in
 the controllers and views of your application and send them to the
-*ProductsController* for Spree.
+_ProductsController_ for Spree.
 
 Due to the namespacing changes, these references must now be called on
-the *spree* routing proxy, so that Rails will route to Spree's
-*product_url*, rather than a *potential* *product_url* within an
+the _spree_ routing proxy, so that Rails will route to Spree's
+_product_url_, rather than a _potential_ _product_url_ within an
 application. Routing helpers referencing Spree parts must now be written
 like this:
 
@@ -60,7 +61,7 @@ spree.product_url
 ```
 
 Conversely, to reference routes from the main application within a
-controller, view or template from Spree, you must use the *main_app*
+controller, view or template from Spree, you must use the _main_app_
 routing proxy like this:
 
 ```ruby
@@ -74,9 +75,9 @@ route from Spree without the proxy as well.
 
 ## Mounting the Spree engine
 
-When *rails g spree:install* is run inside an application, it will
-install Spree, mounting the *Spree::Core::Engine* component by inserting
-this line automatically into *config/routes.rb*:
+When _rails g spree:install_ is run inside an application, it will
+install Spree, mounting the _Spree::Core::Engine_ component by inserting
+this line automatically into _config/routes.rb_:
 
 ```ruby
 mount Spree::Core::Engine, at: "/"
@@ -86,8 +87,8 @@ By default, all Spree routes will be available at the root of your
 domain. For example, if your domain is http://shop.com, Spree's
 /products URL will be available at http://shop.com/products.
 
-You can customize this simply by changing the *:at* specification in
-*config/routes.rb* to be something else. For example, if your domain is
+You can customize this simply by changing the _:at_ specification in
+_config/routes.rb_ to be something else. For example, if your domain is
 http://bobsite.com and you would like Spree to be mounted at /shop, you
 can write this:
 
@@ -122,7 +123,7 @@ generate sample data.
 
 To add Spree to a Rails application you do the following:
 
-```bash
+````bash
 $ gem install spree
 $ rails new my_store
 $ cd my_store
@@ -158,7 +159,7 @@ gem 'spree'
 
 #  add to your Gemfile after the Spree gem
 gem 'spree_gateway'
-```
+````
 
 The gateways available in the [Spree Gateway
 Gem](https://github.com/spree/spree_gateway) are community supported.
@@ -180,9 +181,9 @@ for notes on this release.
 
 ## Middleware
 
-The lines for middleware in *config/application.rb* within a host
+The lines for middleware in _config/application.rb_ within a host
 application are now deprecated. When upgrading to Spree 1.0 you must
-remove these two lines from *config/application.rb*:
+remove these two lines from _config/application.rb_:
 
 ```ruby
 config.middleware.use "SeoAssist"
@@ -194,10 +195,10 @@ These two pieces of middleware are now automatically included by the
 
 ## Product
 
-*master_price*, *master_price=*, *variants?*, *variant* are now
-officially retired. Please use *Spree::Product#price*,
-*Spree::Product#price=*, *Spree::Product#has_variants?* and
-*Spree::Product#master* respectively instead.
+_master_price_, _master_price=_, _variants?_, _variant_ are now
+officially retired. Please use _Spree::Product#price_,
+_Spree::Product#price=_, _Spree::Product#has_variants?_ and
+_Spree::Product#master_ respectively instead.
 
 ## Spree::Config[:stylesheets]
 
@@ -210,18 +211,18 @@ through the Asset Pipeline by making the extension an engine.
 
 ## General deprecations
 
--   *Gateway.current* is now deprecated. Use
-    *order.payment_method.gateway* now.
-    [#747](https://github.com/spree/spree/pull/747)
+- _Gateway.current_ is now deprecated. Use
+  _order.payment_method.gateway_ now.
+  [#747](https://github.com/spree/spree/pull/747)
 
 # Calculator
 
 ## Calculator::PriceBucket is now renamed to Calculator::PriceSack
 
-The *PriceBucket* contains Bucket keyword that conflicts with *AWS::S3*
+The _PriceBucket_ contains Bucket keyword that conflicts with _AWS::S3_
 library which has caused few issues with Heroku deployment. If you used
 this calculator in your application, then you will need to rename it to
-*PriceSack*.
+_PriceSack_.
 
 # Taxation
 
@@ -261,10 +262,12 @@ order. Price adjustments are tax calculations equivalent to the amount
 of tax included in a price. These adjustments are not counted against
 the order total but are sometimes useful for reporting purposes.
 
-***
+---
+
 You don't need to worry about price adjustments unless your prices
 include tax (such as the case with Value Added Tax.)
-***
+
+---
 
 ## New `Order#price_adjustment_totals` method
 
@@ -302,10 +305,12 @@ You can also have multiple tax rates with this designation.
 This method is responsible for calculating the price. This is basically
 an internal change but some developers may be interested to know this.
 
-***
+---
+
 Marking a tax rate as including price is the new way to handle
 Value Added Tax (VAT) and other similar tax schemes.
-***
+
+---
 
 # Zones
 
@@ -326,11 +331,13 @@ practice of RSpec + Capybara.
 This section aims to walk you through upgrading to the newest version of
 Spree.
 
-***
+---
+
 This steps in this guide were written while upgrading from 0.70.x
 to 1.0.0. Upgrading older versions of Spree may require some additional
 steps.
-***
+
+---
 
 ## Upgrading the Spree Gem
 
@@ -343,7 +350,7 @@ gem 'spree', '1.0.0'
 
 Next, you will need to update this gem using this command:
 
-```bash
+````bash
 $ bundle update spree```
 
 ***
@@ -370,19 +377,19 @@ at: '/'` as shown below.
 #config/routes.rb
 YourStore::Application.routes.draw do
   mount Spree::Core::Engine, at: '/'
-  
+
   # your application's custom routes
   …
 end
-```
+````
 
 If you're mounting Spree at the default root path, it is recommended to
 place your application's custom routes beneath Spree's mounted routes as
 shown in the above example. This will ensure you don't override any of
 Spree's defined routes.
 
-You may choose to mount Spree at a custom location by changing the *:at*
-option to something different, such as *at: '/shop'*.
+You may choose to mount Spree at a custom location by changing the _:at_
+option to something different, such as _at: '/shop'_.
 
 ## Update config/application.rb
 
@@ -407,7 +414,7 @@ config.middleware.delete
 
 ## Migrations
 
-```bash
+````bash
 $ bundle exec rake railties:install:migrations```
 
 Run the above command to copy over all the migrations from all the
@@ -418,7 +425,7 @@ Then it is time to run any new migrations copied to your application.
 
 ```bash
 $ bundle exec rake db:migrate
-```
+````
 
 ## Asset Manifest Files
 
@@ -430,74 +437,73 @@ Remove the line requiring spree_dash from
 
 ## Other Tips for Upgrading
 
--   If your application defines any class decorators, you will need to
-    update these files to decorate Spree's new namespace classes. This
-    means *Product* becomes *Spree::Product*, *Country* becomes
-    *Spree::Country*, and so on.
--   Correct the paths to any templates you are overriding to include the
-    Spree namespace. Things such as **app/views/products/show.html.erb**
-    have now become **app/views/spree/products/show.html.erb**.
+- If your application defines any class decorators, you will need to
+  update these files to decorate Spree's new namespace classes. This
+  means _Product_ becomes _Spree::Product_, _Country_ becomes
+  _Spree::Country_, and so on.
+- Correct the paths to any templates you are overriding to include the
+  Spree namespace. Things such as **app/views/products/show.html.erb**
+  have now become **app/views/spree/products/show.html.erb**.
 
 # Bug fixes
 
--   Fixed issue caused by using *&:upcase* syntax inside the *tab*
-    helper provided by *Admin::NavigationHelper*.
-    [#693](https://github.com/spree/spree/pull/693) and
-    [#704](https://github.com/spree/spree/pull/704).
--   Fixed issue where non-ASCII characters were not being correctly
-    titleized in the *tab* helper provided by *Admin::NavigationHelper*.
-    [#722](https://github.com/spree/spree/pull/722)
--   When Thinking Sphinx was being used, a conflict would occur with its
-    *Scopes* module and the one inside Spree.
-    [#740](https://github.com/spree/spree/pull/740)
--   Added *script/rails* to core to allow things such as *rails
-    generate* and *rails console* to be used. [commit
-    b0903ea](https://github.com/spree/spree/commit/b0903ea477b63bd36c9940b5e0386e29e55f6189)
--   Performance improvements for the *best_selling_variants* and
-    *top_grossing_variants* methods in *Admin::OverviewController*.
-    [#718](https://github.com/spree/spree/pull/718)
--   If an admin user already exists, *rake db:admin:create* will now ask
-    if you want to override.
-    [#752](https://github.com/spree/spree/pull/752)
--   Making a request to a URL such as
-    */admin/products/non-existant/edit* no longer shows a status 500
-    page. [#538](https://github.com/spree/spree/issues/538)
--   *rails g spree:install* output is now not so excessive. [commit
-    ca4db30](https://github.com/spree/spree/commit/ca4db301e773da4ebc9d2a13e24c5d0e86dd0108)
--   The *Spree::Core::Engine* is automatically mounted inside your
-    application when you run *rails g spree:install*. [commit
-    ba67b51](https://github.com/spree/spree/commit/ba67b514af41918bf892323c9fd685689c74667a)
--   Product *on_hand* now takes all variants into account.
-    [#772](https://github.com/spree/spree/issues/772)
--   The translation for "Listing Products" in admin/products now is more
-    easily translatable into different languages. [commit
-    c0d5cb5](https://github.com/spree/spree/commit/c0d5cb5316715ec8aa886fab5bc0820be616d302)
--   Removed POSIX-only system calls, replaced with Ruby calls instead to
-    enable Windows compatibility.
-    [#711](https://github.com/spree/spree/issues/711) and [commit
-    ce00172](https://github.com/spree/spree/commit/ce001721a32dd84523d9504feec074db72ef3efb)
--   Improved *bundle exec rake test_app* performance. [commit
-    6a2d367](https://github.com/spree/spree/commit/ce001721a32dd84523d9504feec074db72ef3efb)
--   Improved permalink code, removed reliance on the
-    *rd-find_by_param* gem.
-    [#444](https://github.com/spree/spree/issues/444) and
-    [#847](https://github.com/spree/spree/issues/847)
--   Master variant is now deleted when a product is deleted. Performance
-    with this action has also been improved.
-    [#801](https://github.com/spree/spree/issues/801)
--   An invalid coupon code on the payment screen will now show an error.
-    [#717](https://github.com/spree/spree/issues/717)
--   Products are now restocked when an order is canceled, and unstocked
-    when the order is resumed.
-    [#729](https://github.com/spree/spree/issues/729)
--   The *ffaker* gem is now used in favor of the *faker* gem.
-    [#826](https://github.com/spree/spree/issues/826)
--   *Spree::Config.set* should no longer be used, please use
-    *Spree.config* with a block: [commit
-    5590fb3](https://github.com/spree/spree/commit/5590fb3)
-    [#801](https://github.com/spree/spree/issues/801)
--   Fix calculator dropdown bug for creating a shipping method in the
-    admin interface. [#825](https://github.com/spree/spree/issues/825)
--   Fix escaping of *order_subtotal* in view.
-    [#852](https://github.com/spree/spree/issues/852)
-
+- Fixed issue caused by using _&:upcase_ syntax inside the _tab_
+  helper provided by _Admin::NavigationHelper_.
+  [#693](https://github.com/spree/spree/pull/693) and
+  [#704](https://github.com/spree/spree/pull/704).
+- Fixed issue where non-ASCII characters were not being correctly
+  titleized in the _tab_ helper provided by _Admin::NavigationHelper_.
+  [#722](https://github.com/spree/spree/pull/722)
+- When Thinking Sphinx was being used, a conflict would occur with its
+  _Scopes_ module and the one inside Spree.
+  [#740](https://github.com/spree/spree/pull/740)
+- Added _script/rails_ to core to allow things such as _rails
+  generate_ and _rails console_ to be used. [commit
+  b0903ea](https://github.com/spree/spree/commit/b0903ea477b63bd36c9940b5e0386e29e55f6189)
+- Performance improvements for the _best_selling_variants_ and
+  _top_grossing_variants_ methods in _Admin::OverviewController_.
+  [#718](https://github.com/spree/spree/pull/718)
+- If an admin user already exists, _rake db:admin:create_ will now ask
+  if you want to override.
+  [#752](https://github.com/spree/spree/pull/752)
+- Making a request to a URL such as
+  _/admin/products/non-existant/edit_ no longer shows a status 500
+  page. [#538](https://github.com/spree/spree/issues/538)
+- _rails g spree:install_ output is now not so excessive. [commit
+  ca4db30](https://github.com/spree/spree/commit/ca4db301e773da4ebc9d2a13e24c5d0e86dd0108)
+- The _Spree::Core::Engine_ is automatically mounted inside your
+  application when you run _rails g spree:install_. [commit
+  ba67b51](https://github.com/spree/spree/commit/ba67b514af41918bf892323c9fd685689c74667a)
+- Product _on_hand_ now takes all variants into account.
+  [#772](https://github.com/spree/spree/issues/772)
+- The translation for "Listing Products" in admin/products now is more
+  easily translatable into different languages. [commit
+  c0d5cb5](https://github.com/spree/spree/commit/c0d5cb5316715ec8aa886fab5bc0820be616d302)
+- Removed POSIX-only system calls, replaced with Ruby calls instead to
+  enable Windows compatibility.
+  [#711](https://github.com/spree/spree/issues/711) and [commit
+  ce00172](https://github.com/spree/spree/commit/ce001721a32dd84523d9504feec074db72ef3efb)
+- Improved _bundle exec rake test_app_ performance. [commit
+  6a2d367](https://github.com/spree/spree/commit/ce001721a32dd84523d9504feec074db72ef3efb)
+- Improved permalink code, removed reliance on the
+  _rd-find_by_param_ gem.
+  [#444](https://github.com/spree/spree/issues/444) and
+  [#847](https://github.com/spree/spree/issues/847)
+- Master variant is now deleted when a product is deleted. Performance
+  with this action has also been improved.
+  [#801](https://github.com/spree/spree/issues/801)
+- An invalid coupon code on the payment screen will now show an error.
+  [#717](https://github.com/spree/spree/issues/717)
+- Products are now restocked when an order is canceled, and unstocked
+  when the order is resumed.
+  [#729](https://github.com/spree/spree/issues/729)
+- The _ffaker_ gem is now used in favor of the _faker_ gem.
+  [#826](https://github.com/spree/spree/issues/826)
+- _Spree::Config.set_ should no longer be used, please use
+  _Spree.config_ with a block: [commit
+  5590fb3](https://github.com/spree/spree/commit/5590fb3)
+  [#801](https://github.com/spree/spree/issues/801)
+- Fix calculator dropdown bug for creating a shipping method in the
+  admin interface. [#825](https://github.com/spree/spree/issues/825)
+- Fix escaping of _order_subtotal_ in view.
+  [#852](https://github.com/spree/spree/issues/852)
