--- a/guides/src/content/release_notes/1_1_0.md
+++ b/guides/src/content/release_notes/1_1_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 1.1.0
 section: release_notes
+order: 17
 ---
 
 # Summary
@@ -27,7 +28,7 @@ It is recommended
 that you use the latest version 3.2.3. Please upgrade your Rails before
 bumping Spree gem by modifying your Gemfile:
 
-```bash
+````bash
 gem 'rails', '3.2.3'
  group :assets do
      gem 'sass-rails', '~> 3.2.3'
@@ -304,4 +305,4 @@ information.
     costing $1 and 3 line items with quantity of 5 that would be $15,
     rather than $3.
     [#1414](https://github.com/spree/spree/issues/1414)
-
+````
