--- a/guides/src/content/release_notes/1_1_4.md
+++ b/guides/src/content/release_notes/1_1_4.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 1.1.4
 section: release_notes
+order: 16
 ---
 
 # Summary
@@ -19,7 +20,7 @@ recommend upgrading to 1.2.x as soon as possible.
 This new version of Spree most likely contains new migrations. Please
 install them and run them with this command:
 
-```bash
+````bash
 bundle exec rake railties:install:migrations
 bundle exec rake db:migrate```
 
@@ -49,7 +50,7 @@ this:
 //= require admin/spree_promo
 
 //= require_tree .
-```
+````
 
 Inside `app/assets/javascripts/store/all.js`, the directives should be
 this:
@@ -71,56 +72,55 @@ These changes are important, as they fix [Issue
 
 # Minor fixes
 
--   Ensure there is a valid state during the checkout.
-    [#1770](https://github.com/spree/spree/issues/1770)
--   Use GET request for /user/logout.
-    [#1663](https://github.com/spree/spree/issues/1663) and
-    [#1812](https://github.com/spree/spree/issues/1812)
--   Use product description if no meta description is provided.
-    [#1811](https://github.com/spree/spree/issues/1811)
--   Don't update *product.count_on_hand* if track inventory labels is
-    disabled. [#1820](https://github.com/spree/spree/issues/1820)
--   Set payment state to *credit_owed* if order is cancelled and
-    nothing is shipped.
-    [#1513](https://github.com/spree/spree/issues/1513)
--   Added *ignore_types* option for *flash_messages* to ignore
-    specific types of flash messages.
-    [#1835](https://github.com/spree/spree/issues/1835)
--   Added large image placeholder.
-    [#1828](https://github.com/spree/spree/issues/1828)
--   Assets are no longer precompiled during the installation process.
-    [#1854](https://github.com/spree/spree/issues/1854)
--   API responses now return the correct content type.
-    [#1866](https://github.com/spree/spree/issues/1866)
--   I18n-ify order cancel, confirmation and shipment emails.
-    [#1884](https://github.com/spree/spree/issues/1884)
--   Preferences are now checked for in database before falling back to
-    their defined-defaults.
-    [#1500](https://github.com/spree/spree/issues/1500)
--   Deleted shipping methods are no longer visible in the admin backend.
-    [#1847](https://github.com/spree/spree/issues/1847) and
-    [#1967](https://github.com/spree/spree/issues/1967).
--   Moved admin JS translations out to their own partial
-    (*core/app/views/admin/shared/_translations.html.erb*)
-    [#1906](https://github.com/spree/spree/issues/1906)
--   Fixed error where admin page for tax rates would not load if a tax
-    rate didn't have a valid zone.
-    [#2019](https://github.com/spree/spree/issues/2019)
--   Fixed incorrect PriceSack calculation
-    [#2055](https://github.com/spree/spree/issues/2055)
--   InventoryUnit#restock_variant will no longer alter
-    *variant.count_on_hand* if inventory tracking is disabled.
--   Orders with all return authorizations received are now marked as
-    returned. [#1714](https://github.com/spree/spree/issues/1714) and
-    [#2097](https://github.com/spree/spree/issues/2097)
--   *Product.in_taxons* will now only return unique products.
-    [#1917](https://github.com/spree/spree/issues/1917) and
-    [#1974](https://github.com/spree/spree/issues/1974) and
-    [#1962](https://github.com/spree/spree/issues/1962)
--   *Product.on_hand* no longer sums deleted variants.
-    [#2112](https://github.com/spree/spree/issues/2112)
--   EXIF data is now stripped from uploaded JPEGs
-    [#2145](https://github.com/spree/spree/issues/2145)
--   OrdersController#show now requires SSL, as it contains sensitive
-    data. [#2164](https://github.com/spree/spree/issues/2164).
-
+- Ensure there is a valid state during the checkout.
+  [#1770](https://github.com/spree/spree/issues/1770)
+- Use GET request for /user/logout.
+  [#1663](https://github.com/spree/spree/issues/1663) and
+  [#1812](https://github.com/spree/spree/issues/1812)
+- Use product description if no meta description is provided.
+  [#1811](https://github.com/spree/spree/issues/1811)
+- Don't update _product.count_on_hand_ if track inventory labels is
+  disabled. [#1820](https://github.com/spree/spree/issues/1820)
+- Set payment state to _credit_owed_ if order is cancelled and
+  nothing is shipped.
+  [#1513](https://github.com/spree/spree/issues/1513)
+- Added _ignore_types_ option for _flash_messages_ to ignore
+  specific types of flash messages.
+  [#1835](https://github.com/spree/spree/issues/1835)
+- Added large image placeholder.
+  [#1828](https://github.com/spree/spree/issues/1828)
+- Assets are no longer precompiled during the installation process.
+  [#1854](https://github.com/spree/spree/issues/1854)
+- API responses now return the correct content type.
+  [#1866](https://github.com/spree/spree/issues/1866)
+- I18n-ify order cancel, confirmation and shipment emails.
+  [#1884](https://github.com/spree/spree/issues/1884)
+- Preferences are now checked for in database before falling back to
+  their defined-defaults.
+  [#1500](https://github.com/spree/spree/issues/1500)
+- Deleted shipping methods are no longer visible in the admin backend.
+  [#1847](https://github.com/spree/spree/issues/1847) and
+  [#1967](https://github.com/spree/spree/issues/1967).
+- Moved admin JS translations out to their own partial
+  (_core/app/views/admin/shared/\_translations.html.erb_)
+  [#1906](https://github.com/spree/spree/issues/1906)
+- Fixed error where admin page for tax rates would not load if a tax
+  rate didn't have a valid zone.
+  [#2019](https://github.com/spree/spree/issues/2019)
+- Fixed incorrect PriceSack calculation
+  [#2055](https://github.com/spree/spree/issues/2055)
+- InventoryUnit#restock_variant will no longer alter
+  _variant.count_on_hand_ if inventory tracking is disabled.
+- Orders with all return authorizations received are now marked as
+  returned. [#1714](https://github.com/spree/spree/issues/1714) and
+  [#2097](https://github.com/spree/spree/issues/2097)
+- _Product.in_taxons_ will now only return unique products.
+  [#1917](https://github.com/spree/spree/issues/1917) and
+  [#1974](https://github.com/spree/spree/issues/1974) and
+  [#1962](https://github.com/spree/spree/issues/1962)
+- _Product.on_hand_ no longer sums deleted variants.
+  [#2112](https://github.com/spree/spree/issues/2112)
+- EXIF data is now stripped from uploaded JPEGs
+  [#2145](https://github.com/spree/spree/issues/2145)
+- OrdersController#show now requires SSL, as it contains sensitive
+  data. [#2164](https://github.com/spree/spree/issues/2164).
