--- a/guides/src/content/release_notes/2_0_0.md
+++ b/guides/src/content/release_notes/2_0_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 2.0.0
 section: release_notes
+order: 12
 ---
 
 ## Major/new features
@@ -10,7 +11,7 @@ section: release_notes
 #### Removing support for Ruby 1.8.7
 
 Support for Ruby 1.8.7 is going away in this major release. If you are still using
-1.8.7,  it is time to upgrade.
+1.8.7, it is time to upgrade.
 [Ruby 1.8.7 is End of Life'd at the end of June](https://blog.engineyard.com/2012/ruby-1-8-7-and-ree-end-of-life)
 
 Upgrading to Ruby 1.9.3 or higher is highly encouraged. Spree 2.0 and above supports Ruby 2.
@@ -22,12 +23,12 @@ frontend separately from the other. We did a lot of work toward this goal as par
 <%= issue 2225 %> and now Spree is split up
 into the following components:
 
-* API
-* **Backend**
-* Core
-* Dash
-* **Frontend**
-* Sample
+- API
+- **Backend**
+- Core
+- Dash
+- **Frontend**
+- Sample
 
 The **Backend** component provides the admin interface for Spree and the
 **Frontend** component provides the frontend user-facaing checkout interface. These
@@ -92,13 +93,13 @@ helper so that they are namespaced correctly.
 
 API clients can now manage the following resources through the API:
 
-* Option Types
-* Option Values
-* Inventory Units
-* Shipments
-* Stock Items
-* Stock Locations
-* Stock Movements
+- Option Types
+- Option Values
+- Inventory Units
+- Shipments
+- Stock Items
+- Stock Locations
+- Stock Movements
 
 The documentation for these endpoints hasn't been written yet, but will be shortly.
 
@@ -123,8 +124,8 @@ information](http://edgeguides.spreecommerce.com/api/summary.html#customizing-re
 #### Adjustment state changes
 
 Adjustments can now be open, closed or finalized, allowing for a more flexible
- adjustments system. An 'open' adjustment can be modified, whereas a 'closed'
- adjustment cannot. Finalized adjustments are never altered.
+adjustments system. An 'open' adjustment can be modified, whereas a 'closed'
+adjustment cannot. Finalized adjustments are never altered.
 
 <%= commit "43a3cca49180b1572e41bc3638d3ca0f0e9116d9" %>
 
@@ -159,7 +160,7 @@ to 1-3-stable as well, and will be available in Spree releases >= 1.3.3.
 The `insert_checkout_step` takes a `before` or `after` option to determine where to
 insert the step:
 
-```ruby
+````ruby
 insert_checkout_step :new_step, before: :address
 # or
 insert_checkout_step :new_step, after: :address```
@@ -317,3 +318,4 @@ Some of these changes may have made it into 1-3-stable or 1-2-stable as well. Yo
 * Fix issue where going back a step in a cart could cause a `undefined method run_callbacks` error to be raised. <%= issue 2959 %> <%= issue 2921 %>
 * Use DISTINCT ON to make product `in_taxon` scope really distinct in PostgreSQL <%= issue 2851 %>
 * Run order update hooks when order is finalized too <%= issue 2986 %>
+````
