--- a/guides/src/content/release_notes/3_5_0.md
+++ b/guides/src/content/release_notes/3_5_0.md
@@ -1,6 +1,7 @@
 ---
 title: Spree 3.5.0
 section: release_notes
+order: 2
 ---
 
 ## Major/New Features
@@ -42,6 +43,7 @@ Contributed by [supatk](https://github.com/spree/spree/issues/8583)
 ## Installation
 
 ### Add Spree gems to Gemfile
+
 ```ruby
 gem 'spree', '~> 3.5.0'
 gem 'spree_auth_devise', '~> 3.3'
@@ -91,21 +93,21 @@ as it was [extracted from the core](https://github.com/spree/spree/pull/8408).
 
 1. Add [Spree Analytics Trackers](https://github.com/spree-contrib/spree_analytics_trackers) to your `Gemfile`:
 
-  ```ruby
-  gem 'spree_analytics_trackers', github: 'spree-contrib/spree_analytics_trackers'
-  ```
+```ruby
+gem 'spree_analytics_trackers', github: 'spree-contrib/spree_analytics_trackers'
+```
 
 2. Install the gem using Bundler:
 
-  ```bash
-  bundle install
-  ```
+```bash
+bundle install
+```
 
 3. Copy and run migrations:
 
-  ```bash
-  bundle exec rails g spree_analytics_trackers:install
-  ```
+```bash
+bundle exec rails g spree_analytics_trackers:install
+```
 
 You're good to go!
 
@@ -115,64 +117,64 @@ Also please review each of the noteworthy changes, and ensure your customization
 or extensions are not effected. If you are affected by a change, and have any
 of your own tips please submit a PR to help the next person!
 
-* Added `Address#EXCLUDED_KEYS_FOR_COMPARISION` so developers won't need to rewrite `Address#same_as` method
+- Added `Address#EXCLUDED_KEYS_FOR_COMPARISION` so developers won't need to rewrite `Address#same_as` method
 
   [Spark Solutions](https://github.com/spree/spree/pull/8387)
 
-* Added `PromotionActionLineItem` validations
+- Added `PromotionActionLineItem` validations
 
   [Spark Solutions](https://github.com/spree/spree/pull/8533)
 
-* Renamed `FrontendHelper#breadcrumbs` to `FrontendHelper#spree_breadcrumbs` and
+- Renamed `FrontendHelper#breadcrumbs` to `FrontendHelper#spree_breadcrumbs` and
   `Admin::NavigationHelper#icon` to `Admin::NavigationHelper#spree_icon`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8445)
 
-* Deprecated `EnvironmentExtension`
+- Deprecated `EnvironmentExtension`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8459)
 
-* Deprecated `render_404`
+- Deprecated `render_404`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8465)
 
-* Updated javascript libraries in vendor
+- Updated javascript libraries in vendor
 
   [Spark Solutions](https://github.com/spree/spree/pull/8402)
 
-* Added `Dockerfile` for sandbox application
+- Added `Dockerfile` for sandbox application
 
   [Spark Solutions](https://github.com/spree/spree/pull/8402)
 
-* Replaced phantomjs with chrome headless
+- Replaced phantomjs with chrome headless
 
   [Spark Solutions](https://github.com/spree/spree/pull/8429)
 
-* Replaced FactoryGirl with FactoryBot
+- Replaced FactoryGirl with FactoryBot
 
   [Spark Solutions](https://github.com/spree/spree/pull/8431)
 
-* Moved EmailValidator from lib to app
+- Moved EmailValidator from lib to app
 
   [Spark Solutions](https://github.com/spree/spree/pull/8612)
 
-* Added `rubocop-rspec` and fixed linter issues
+- Added `rubocop-rspec` and fixed linter issues
 
   [artplan1](https://github.com/spree/spree/pull/8574)
 
-* Added searching for a taxon with taxonomy in api
+- Added searching for a taxon with taxonomy in api
 
   [saravanak](https://github.com/spree/spree/pull/8594)
 
-* `rescue nil` removed from promotion rules and and promotion actions partials
+- `rescue nil` removed from promotion rules and and promotion actions partials
 
   [leemour](https://github.com/spree/spree/pull/8510)
 
-* Dropped dependency on `with_model` gem
+- Dropped dependency on `with_model` gem
 
   [Spark Solutions](https://github.com/spree/spree/pull/8528)
 
-* Updated `paperclip` to `~> 6.0.0`
+- Updated `paperclip` to `~> 6.0.0`
 
   [Spark Solutions](https://github.com/spree/spree/pull/8775)
 
